Feat/context-management (#528)
* feat: [ctx-mgmt-001-01] - Extend data structures for context management

* feat: ctx-mgmt-001-02 - Integrate models.dev for contextWindow data

- Add model-context package with getModelContextWindow function
- Fetch context window data from models.dev API with 7-day cache
- Include BUILTIN_MODEL_CONTEXT fallback for common models
- Support exact match and prefix match for model IDs
- Export sync and async versions with default fallback

* docs: update progress for ctx-mgmt-001-02

* feat: [ctx-mgmt-001-03] - Add comprehensive tests for token estimation

* docs: update progress for ctx-mgmt-001-03

* feat: [ctx-mgmt-001-04] - Implement dynamic tool call cleanup

* docs: update progress for ctx-mgmt-001-04

* feat: [ctx-mgmt-001-05] - Implement dynamic context building from compaction points

* docs: update progress for ctx-mgmt-001-05

* feat: [ctx-mgmt-001-06] - Implement compaction overflow detection

* docs: update progress for ctx-mgmt-001-06

* feat: [ctx-mgmt-001-07] - Implement summary generation for compaction

* docs: update progress for ctx-mgmt-001-07

* feat: [ctx-mgmt-001-08] - Implement compaction execution and state management

* docs: update progress for ctx-mgmt-001-08

* feat: [ctx-mgmt-001-09] - Update context estimation modal with auto-compaction toggle

* docs: update progress for ctx-mgmt-001-09

* feat: [ctx-mgmt-001-10] Add context management settings to settings page

* docs: Update PRD and progress for ctx-mgmt-001-10 completion

* feat: [ctx-mgmt-001-11] Integrate context management with genMessageContext

* docs: Update PRD and progress for ctx-mgmt-001-11 completion

* feat: [ctx-mgmt-001-12] Add integration tests for context management

* docs: Update PRD and progress for ctx-mgmt-001-12 completion - FEATURE COMPLETE

* fix: Use models.dev data as fallback for contextWindow in TokenCountMenu

* fix: Address PR review feedback for context management

- P1: Preserve system prompt after compaction in context

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ملفات غير مدعومة: {{files}}. التنسيقات المدعومة: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} ملف(ات) في قائمة الانتظار لتحليل الخادم",
   "{{count}} MCP servers imported": "{{count}} خوادم MCP مستوردة",
+  "{{count}} ref": "{{count}} مرجع",
   "A cozy coffee shop interior": "تصميم داخلي لمقهى مريح",
+  "A cute rabbit in Pixar animation style": "أرنب لطيف بأسلوب رسوم بيكسار المتحركة",
   "A futuristic city with flying cars": "مدينة مستقبلية مع سيارات طائرة",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "يوجد مزود بهذا المعرف بالفعل. ستؤدي المتابعة إلى الكتابة فوق التكوين الحالي.",
   "A serene mountain landscape at sunset": "منظر جبلي هادئ عند الغروب",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "تلقائي (استخدام نموذج الدردشة)",
   "Auto (Use Chatbox AI)": "تلقائي (استخدام Chatbox AI)",
   "Auto (Use Last Used)": "تلقائي (استخدام آخر نموذج مستخدم)",
+  "Auto Compaction": "الضغط التلقائي",
   "Auto-collapse code blocks": "تلقائيًا إخفاء الكتل البرمجية",
   "Auto-Generate Chat Titles": "تلقائيًا إنشاء عناوين المحادثات",
   "Auto-preview artifacts": "معاينة تلقائية للتحف",
   "Automatic updates": "تحديثات تلقائية",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "عرض التحف المتولدة تلقائيًا (مثل، HTML مع CSS، JS، Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "تلخيص وضغط سجل المحادثة تلقائيًا عندما يتجاوز حجم السياق الحد المحدد، مما يحافظ على المعلومات الأساسية ويقلل من استخدام الرموز.",
   "Azure API Key": "مفتاح Azure API",
   "Azure API Version": "إصدار Azure API",
   "Azure Dall-E Deployment Name": "اسم نشر Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "العودة إلى تسجيل الدخول",
   "Back to Previous": "العودة إلى السابق",
   "Back to previous message": "العودة إلى الرسالة السابقة",
+  "Balanced: Good balance between cost and context preservation": "متوازن: توازن جيد بين التكلفة والحفاظ على السياق",
   "Beta updates": "تحديثات بيتا",
   "Binary/executable files are not supported": "الملفات الثنائية/التنفيذية غير مدعومة",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "يتم توفير بحث Bing للاستخدام المجاني، ولكن قد تكون له قيود وهو عرضة للتغيير من قبل Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "طي",
   "Coming soon": "قريباً",
   "Command": "أمر",
+  "Compacting conversation...": "يجري ضغط المحادثة...",
+  "Compacting...": "جاري الضغط...",
+  "Compaction failed": "فشل الضغط",
+  "Compaction Threshold": "عتبة الضغط",
   "Completed": "اكتمل",
   "Compress Conversation": "ضغط المحادثة",
   "Compression completed successfully!": "اكتمل الضغط بنجاح!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "فشل الاتصال بـ {{aiProvider}}. يحدث هذا عادةً بسبب تكوين غير صحيح أو مشكلات في حساب {{aiProvider}}. يرجى <buttonOpenSettings>التحقق من الإعدادات</buttonOpenSettings> والتحقق من حالة حسابك في {{aiProvider}}، أو شراء <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> لفتح جميع النماذج المتقدمة على الفور دون أي تكوين.",
   "Content": "المحتوى",
   "Context": "السياق",
+  "Context Management": "إدارة السياق",
   "Context messages": "رسائل السياق",
+  "Context Priority: Preserves more context, uses more tokens": "أولوية السياق: يحافظ على سياق أكثر، ويستخدم رموزًا أكثر",
   "Context Window": "نافذة السياق",
+  "Context window unknown for this model": "نافذة السياق غير معروفة لهذا النموذج",
   "Continue Editing": "متابعة التعديل",
   "Continue this thread": "متابعة هذا الموضوع",
   "Continue this Thread": "متابعة هذا الموضوع",
@@ -188,6 +200,8 @@
   "copy": "نسخ",
   "Copy": "نسخ",
   "Copy reasoning content": "نسخ محتوى الاستدلال",
+  "Cost": "التكلفة",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "أولوية التكلفة: يضغط مبكرًا لتوفير الرموز، وقد يفقد بعض السياق.",
   "Create": "إنشاء",
   "Create a New Conversation": "إنشاء محادثة جديدة",
   "Create a New Image-Creator Conversation": "إنشاء محادثة جديدة لمنشئ الصور",
@@ -229,7 +243,9 @@
   "Delete Current Session": "حذف الجلسة الحالية",
   "Delete File": "حذف ملف",
   "Delete Knowledge Base": "حذف قاعدة المعرفة",
+  "Delete Summary": "حذف الملخص",
   "Delete this record?": "حذف هذا السجل؟",
+  "Deleting this summary will restore original messages to context calculation.": "سيؤدي حذف هذا الملخص إلى استعادة الرسائل الأصلية لحساب السياق.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "نشر محتوى HTML إلى EdgeOne Pages والحصول على عنوان URL عام يمكن الوصول إليه.",
   "Describe the image you want to create...": "صف الصورة التي تريد إنشاءها...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "صف الصورة التي تريد إنشاءها. كن مفصلاً قدر الإمكان للحصول على أفضل النتائج.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "مثلاً 128000",
   "e.g. 4096": "على سبيل المثال 4096",
   "e.g., Model Name, Current Date": "مثل، اسم النموذج، التاريخ الحالي",
+  "Earlier messages summarized": "تم تلخيص الرسائل السابقة",
   "Easy Access": "وصول سهل",
   "edit": "تعديل",
   "Edit": "تعديل",
@@ -353,6 +370,7 @@
   "Get License": "احصل على ترخيص",
   "get more": "احصل على المزيد",
   "Github": "Github",
+  "Go to Image Creator": "اذهب إلى منشئ الصور",
   "Google Gemini API Compatible": "متوافق مع Google Gemini API",
   "Harmful or offensive content": "محتوى مضر أو مخلي",
   "Hassle-free setup": "إعداد بدون متاعب",
@@ -744,6 +762,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "الملف الذي أرسلته قد انتهت صلاحيته. لحماية خصوصيتك، تم مسح جميع بيانات ذاكرة التخزين المؤقت المتعلقة بالملف. تحتاج إلى إنشاء محادثة جديدة أو تحديث السياق، ثم إرسال الملف مرة أخرى.",
   "The Image Creator plugin has been activated for the current conversation": "تم تفعيل إضافة منشئ الصور للمحادثة الحالية",
   "The license key you entered is invalid. Please check your license key and try again.": "مفتاح الترخيص الذي أدخلته غير صالح. يرجى التحقق من مفتاح الترخيص والمحاولة مرة أخرى.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "النسبة المئوية لاستخدام نافذة السياق التي تؤدي إلى تشغيل الضغط التلقائي. القيم الأقل توفر الرموز ولكنها قد تفقد السياق في وقت أبكر.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "يتحكم معامل topP في تنوع استجابات AI: القيم المنخفضة تجعل المخرجات أكثر تركيزًا وقابلية للتنبؤ، بينما تسمح القيم الأعلى بردود أكثر تنوعًا وإبداعًا.",
   "Theme": "المظهر",
   "Thinking": "جاري التفكير",
@@ -754,12 +773,14 @@
   "Thinking Effort only works for OpenAI o-series models": "جهد التفكير يعمل فقط مع نماذج OpenAI o-series",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "خدمة تحليل سحابي من طرف ثالث، تدعم ملفات PDF ومعظم ملفات Office. تتطلب رمز API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "هذا الإجراء لا يمكن التراجع عنه. سيتم حذف جميع المستندات وتضميناتها نهائيًا.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "هذه الجلسة للصور لم تعد نشطة. يرجى استخدام منشئ الصور الجديد لإنشاء الصور.",
   "This license key has reached the activation limit": "لقد وصل مفتاح الترخيص هذا إلى حد التفعيل",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "لقد وصل مفتاح الترخيص هذا إلى حد التفعيل، <a>انقر هنا</a> لإدارة الترخيص والأجهزة لتعطيل الأجهزة القديمة.",
   "This license key has reached the activation limit.": "وصل مفتاح الترخيص هذا إلى حد التنشيط.",
   "This model does not support tool use": "هذا النموذج لا يدعم استخدام الأدوات",
   "This model does not support vision": "هذا النموذج لا يدعم الرؤية",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "يتيح هذا الخادم لـ LLMs استرداد ومعالجة المحتوى من صفحات الويب، مع تحويل HTML إلى ماركداون لتسهيل استهلاكه.",
+  "This session": "هذه الجلسة",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "سيقوم هذا بفحص جميع المحادثات المخزنة وإعادة بناء قائمة المحادثات. ستمسح هذه العملية القائمة الحالية وقد تستغرق لحظة.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "سيقوم هذا بتلخيص المحادثة الحالية وبدء محادثة جديدة مع السياق المضغوط. هل تريد المتابعة؟",
   "Thread History": "تاريخ المواضيع",
@@ -833,6 +854,7 @@
   "WeChat": "وي تشات",
   "Welcome to Chatbox": "مرحباً بكم في Chatbox AI",
   "What can I help you with today?": "كيف يمكنني مساعدتك اليوم؟",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "عند التفعيل، سيتم تلخيص المحادثات تلقائياً لإدارة استخدام نافذة السياق.",
   "Yes": "نعم",
   "You are already a Premium user": "أنت بالفعل مستخدم مميز",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "لقد تجاوزت الحد الأقصى لمعدل استخدام خدمة Chatbox AI. يرجى المحاولة مرة أخرى لاحقًا.",
