--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} Datei(en) nicht unterstützt: {{files}}. Unterstützte Formate: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} Datei(en) zur Server-Analyse in die Warteschlange gestellt",
   "{{count}} MCP servers imported": "{{count}} MCP Server importiert",
+  "{{count}} ref": "{{count}} Ref.",
   "A cozy coffee shop interior": "Ein gemütliches Café-Interieur",
+  "A cute rabbit in Pixar animation style": "Ein süßer Hase im Pixar-Animationsstil",
   "A futuristic city with flying cars": "Eine futuristische Stadt mit fliegenden Autos",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ein Anbieter mit dieser ID existiert bereits. Wenn Sie fortfahren, wird die bestehende Konfiguration überschrieben.",
   "A serene mountain landscape at sunset": "Eine friedliche Berglandschaft bei Sonnenuntergang",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Automatisch (Chat-Modell verwenden)",
   "Auto (Use Chatbox AI)": "Automatisch (Chatbox AI verwenden)",
   "Auto (Use Last Used)": "Automatisch (Letztes verwendetes Modell verwenden)",
+  "Auto Compaction": "Automatische Komprimierung",
   "Auto-collapse code blocks": "Automatisch Codeblöcke schließen",
   "Auto-Generate Chat Titles": "Automatisch Chat-Titel generieren",
   "Auto-preview artifacts": "Artefakte automatisch anzeigen",
   "Automatic updates": "Automatische Updates",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Automatisches Rendern von generierten Artefakten (z. B. HTML mit CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Fasst den Konversationsverlauf automatisch zusammen und komprimiert ihn, wenn die Kontextgröße den Schwellenwert überschreitet. Dabei bleiben wichtige Informationen erhalten, während der Token-Verbrauch reduziert wird.",
   "Azure API Key": "Azure API-Schlüssel",
   "Azure API Version": "Azure API-Version",
   "Azure Dall-E Deployment Name": "Azure Dall-E Einsatzname",
@@ -95,6 +99,7 @@
   "Back to Login": "Zurück zum Login",
   "Back to Previous": "Zum vorherigen Thema zurückkehren",
   "Back to previous message": "Zurück zur vorherigen Nachricht",
+  "Balanced: Good balance between cost and context preservation": "Ausgewogen: Gute Balance zwischen Kosten und Kontextbewahrung",
   "Beta updates": "Beta Aktualisierungen",
   "Binary/executable files are not supported": "Binärdateien/ausführbare Dateien werden nicht unterstützt",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Die Bing-Suche wird kostenlos zur Verfügung gestellt, kann jedoch Einschränkungen unterliegen und von Microsoft geändert werden.",
@@ -154,6 +159,10 @@
   "Collapse": "Reduzieren",
   "Coming soon": "Demnächst",
   "Command": "Befehl",
+  "Compacting conversation...": "Konversation wird komprimiert...",
+  "Compacting...": "Wird komprimiert...",
+  "Compaction failed": "Komprimierung fehlgeschlagen",
+  "Compaction Threshold": "Kompaktierungs-Schwellenwert",
   "Completed": "Abgeschlossen",
   "Compress Conversation": "Konversation komprimieren",
   "Compression completed successfully!": "Komprimierung erfolgreich abgeschlossen!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Verbindung zu {{aiProvider}} fehlgeschlagen. Dies tritt in der Regel aufgrund einer falschen Konfiguration oder {{aiProvider}}-Kontoprobleme auf. Bitte <buttonOpenSettings>überprüfen Sie Ihre Einstellungen</buttonOpenSettings> und überprüfen Sie den Status Ihres {{aiProvider}}-Kontos oder kaufen Sie eine <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, um sofort alle erweiterten Modelle ohne Konfiguration freizuschalten.",
   "Content": "Inhalt",
   "Context": "Kontext",
+  "Context Management": "Kontext-Management",
   "Context messages": "Kontextnachrichtenanzahl",
+  "Context Priority: Preserves more context, uses more tokens": "Kontext-Priorität: Erhält mehr Kontext, verbraucht mehr Tokens",
   "Context Window": "Kontextfenster",
+  "Context window unknown for this model": "Kontextfenster für dieses Modell unbekannt",
   "Continue Editing": "Weiter bearbeiten",
   "Continue this thread": "Dieses Thema fortsetzen",
   "Continue this Thread": "Dieses Thema fortsetzen",
@@ -188,6 +200,8 @@
   "copy": "Kopieren",
   "Copy": "Kopieren",
   "Copy reasoning content": "Begründungsinhalt kopieren",
+  "Cost": "Kosten",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Kostenpriorität: Komprimiert frühzeitig, um Tokens zu sparen, verliert möglicherweise etwas Kontext",
   "Create": "Erstellen",
   "Create a New Conversation": "Neue Konversation erstellen",
   "Create a New Image-Creator Conversation": "Neues Image-Creator-Gespräch erstellen",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Aktuelle Sitzung löschen",
   "Delete File": "Datei löschen",
   "Delete Knowledge Base": "Wissensdatenbank löschen",
+  "Delete Summary": "Zusammenfassung löschen",
   "Delete this record?": "Diesen Datensatz löschen?",
+  "Deleting this summary will restore original messages to context calculation.": "Das Löschen dieser Zusammenfassung stellt die ursprünglichen Nachrichten für die Kontextberechnung wieder her.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML-Inhalt auf EdgeOne Pages bereitstellen und eine zugängliche öffentliche URL erhalten.",
   "Describe the image you want to create...": "Beschreibe das Bild, das du erstellen möchtest...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Beschreiben Sie das Bild, das Sie generieren möchten. Seien Sie für die besten Ergebnisse so detailliert wie möglich.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "z.B. 128000",
   "e.g. 4096": "z.B. 4096",
   "e.g., Model Name, Current Date": "z. B. Modellname, aktuelles Datum",
+  "Earlier messages summarized": "Frühere Nachrichten zusammengefasst",
   "Easy Access": "Einfacher Zugriff",
   "edit": "Bearbeiten",
   "Edit": "Bearbeiten",
@@ -353,6 +370,7 @@
   "Get License": "Lizenz erhalten",
   "get more": "Mehr erhalten",
   "Github": "Github",
+  "Go to Image Creator": "Zum Image Creator",
   "Google Gemini API Compatible": "Google Gemini-API-kompatibel",
   "Harmful or offensive content": "Schädlich oder beleidigend",
   "Hassle-free setup": "Problemlose Einrichtung",
@@ -745,6 +763,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Die von Ihnen gesendete Datei ist abgelaufen. Zum Schutz Ihrer Privatsphäre wurden alle dateibezogenen Cache-Daten gelöscht. Sie müssen ein neues Gespräch erstellen oder den Kontext aktualisieren und die Datei erneut senden.",
   "The Image Creator plugin has been activated for the current conversation": "Das Image Creator-Plugin wurde für das aktuelle Gespräch aktiviert",
   "The license key you entered is invalid. Please check your license key and try again.": "Der eingegebene Lizenzschlüssel ist ungültig. Bitte überprüfen Sie Ihren Lizenzschlüssel und versuchen Sie es erneut.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "Der Prozentsatz der Auslastung des Kontextfensters, der eine automatische Kompaktierung auslöst. Niedrigere Werte sparen Tokens, können jedoch dazu führen, dass der Kontext früher verloren geht.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "Der topP-Parameter steuert die Vielfalt der AI-Antworten: niedrigere Werte machen die Ausgabe fokussierter und vorhersehbarer, während höhere Werte vielfältigere und kreativere Antworten ermöglichen.",
   "Theme": "Thema",
   "Thinking": "Denke",
@@ -755,12 +774,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Thinking Effort funktioniert nur für OpenAI o-series models",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Drittanbieter-Cloud-Parsingdienst, unterstützt PDF und die meisten Office-Dateien. Benötigt API-Token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Diese Aktion kann nicht rückgängig gemacht werden. Alle Dokumente und ihre Embeddings werden dauerhaft gelöscht.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Diese Bild-Session ist nicht mehr aktiv. Bitte verwenden Sie den neuen Image Creator für die Bildgenerierung.",
   "This license key has reached the activation limit": "Dieser Lizenzschlüssel hat das Aktivierungslimit erreicht",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Dieser Lizenzschlüssel hat das Aktivierungslimit erreicht, <a>klicken Sie hier</a>, um die Lizenz und Geräte zu verwalten, um alte Geräte zu deaktivieren.",
   "This license key has reached the activation limit.": "Dieser Lizenzschlüssel hat das Aktivierungslimit erreicht.",
   "This model does not support tool use": "Dieses Modell unterstützt keine Werkzeugnutzung",
   "This model does not support vision": "Dieses Modell unterstützt keine Vision",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Dieser Server ermöglicht LLMs, Inhalte von Webseiten abzurufen und zu verarbeiten, wobei HTML in Markdown für eine einfachere Nutzung umgewandelt wird.",
+  "This session": "Diese Sitzung",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Dabei werden alle gespeicherten Konversationen gescannt und die Konversationsliste neu aufgebaut. Dieser Vorgang löscht die aktuelle Liste und kann einen Moment dauern.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Dies fasst die aktuelle Unterhaltung zusammen und startet einen neuen Thread mit dem komprimierten Kontext. Fortfahren?",
   "Thread History": "Themenverlauf",
@@ -835,6 +856,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Willkommen bei Chatbox AI",
   "What can I help you with today?": "Wie kann ich Ihnen heute helfen?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Wenn aktiviert, werden Unterhaltungen automatisch zusammengefasst, um die Nutzung des Kontextfensters zu verwalten.",
   "Yes": "Ja",
   "You are already a Premium user": "Sie sind bereits ein Premium-Benutzer",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Sie haben das Rate-Limit für den Chatbox AI-Dienst überschritten. Bitte versuchen Sie es später erneut.",
