--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} file(s) queued for server parsing",
   "{{count}} MCP servers imported": "{{count}} MCP servers imported",
+  "{{count}} ref": "{{count}} ref",
   "A cozy coffee shop interior": "A cozy coffee shop interior",
+  "A cute rabbit in Pixar animation style": "A cute rabbit in Pixar animation style",
   "A futuristic city with flying cars": "A futuristic city with flying cars",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "A provider with this ID already exists. Continuing will overwrite the existing configuration.",
   "A serene mountain landscape at sunset": "A serene mountain landscape at sunset",
@@ -65,17 +67,20 @@
   "Auto (Use Chat Model)": "Auto (Use Chat Model)",
   "Auto (Use Chatbox AI)": "Auto (Use Chatbox AI)",
   "Auto (Use Last Used)": "Auto (Use Last Used)",
+  "Auto Compaction": "Auto Compaction",
   "Auto-collapse code blocks": "Auto-collapse code blocks",
   "Auto-Generate Chat Titles": "Auto-Generate Chat Titles",
   "Auto-preview artifacts": "Auto-preview artifacts",
   "Automatic updates": "Automatic updates",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.",
   "Azure API Version": "Azure API Version",
   "Azure Endpoint": "Azure Endpoint",
   "Back to HomePage": "Back to HomePage",
   "Back to Login": "Back to Login",
   "Back to Previous": "Back to Previous",
   "Back to previous message": "Back to previous message",
+  "Balanced: Good balance between cost and context preservation": "Balanced: Good balance between cost and context preservation",
   "Beta updates": "Beta updates",
   "Binary/executable files are not supported": "Binary/executable files are not supported",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.",
@@ -128,6 +133,10 @@
   "Code Search": "Code Search",
   "Collapse": "Collapse",
   "Command": "Command",
+  "Compacting conversation...": "Compacting conversation...",
+  "Compacting...": "Compacting...",
+  "Compaction failed": "Compaction failed",
+  "Compaction Threshold": "Compaction Threshold",
   "Completed": "Completed",
   "Compress Conversation": "Compress Conversation",
   "Compression completed successfully!": "Compression completed successfully!",
@@ -144,8 +153,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.",
   "Content": "Content",
   "Context": "Context",
+  "Context Management": "Context Management",
   "Context messages": "Context messages",
+  "Context Priority: Preserves more context, uses more tokens": "Context Priority: Preserves more context, uses more tokens",
   "Context Window": "Context Window",
+  "Context window unknown for this model": "Context window unknown for this model",
   "Continue Editing": "Continue Editing",
   "Continue this thread": "Continue this thread",
   "Continue with": "Continue with",
@@ -160,6 +172,8 @@
   "copy": "copy",
   "Copy": "Copy",
   "Copy reasoning content": "Copy reasoning content",
+  "Cost": "Cost",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Cost Priority: Compacts early to save tokens, may lose some context",
   "Create": "Create",
   "Create a New Conversation": "Create a New Conversation",
   "Create a New Image-Creator Conversation": "Create a New Image-Creator Conversation",
@@ -197,7 +211,9 @@
   "Delete Current Session": "Delete Current Session",
   "Delete File": "Delete File",
   "Delete Knowledge Base": "Delete Knowledge Base",
+  "Delete Summary": "Delete Summary",
   "Delete this record?": "Delete this record?",
+  "Deleting this summary will restore original messages to context calculation.": "Deleting this summary will restore original messages to context calculation.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.",
   "Describe the image you want to create...": "Describe the image you want to create...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Describe the image you want to generate. Be as detailed as possible for best results.",
@@ -222,6 +238,7 @@
   "e.g. 128000": "e.g. 128000",
   "e.g. 4096": "e.g. 4096",
   "e.g., Model Name, Current Date": "e.g., Model Name, Current Date",
+  "Earlier messages summarized": "Earlier messages summarized",
   "edit": "edit",
   "Edit": "Edit",
   "Edit Avatars": "Edit Avatars",
@@ -305,6 +322,7 @@
   "Get License": "Get License",
   "get more": "get more",
   "Github": "Github",
+  "Go to Image Creator": "Go to Image Creator",
   "Google Gemini API Compatible": "Google Gemini API Compatible",
   "Harmful or offensive content": "Harmful or offensive content",
   "Hassle-free setup": "Hassle-free setup",
@@ -647,6 +665,7 @@
   "Thank you for your report": "Thank you for your report",
   "The conversation list has been successfully recovered": "The conversation list has been successfully recovered",
   "The Image Creator plugin has been activated for the current conversation": "The Image Creator plugin has been activated for the current conversation",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.",
   "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.",
   "Theme": "Theme",
@@ -658,12 +677,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Thinking Effort only works for OpenAI o-series models",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "This action cannot be undone. All documents and their embeddings will be permanently deleted.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "This image session is no longer active. Please use the new Image Creator for image generation.",
   "This license key has reached the activation limit": "This license key has reached the activation limit",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.",
   "This license key has reached the activation limit.": "This license key has reached the activation limit.",
   "This model does not support tool use": "This model does not support tool use",
   "This model does not support vision": "This model does not support vision",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.",
+  "This session": "This session",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "This will summarize the current conversation and start a new thread with the compressed context. Continue?",
   "Thread History": "Thread History",
@@ -727,6 +748,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Welcome to Chatbox AI",
   "What can I help you with today?": "What can I help you with today?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "When enabled, conversations will be automatically summarized to manage context window usage.",
   "You have multiple licenses. Please select one to use:": "You have multiple licenses. Please select one to use:",
   "You have no more Chatbox AI quota left this month.": "You have no more Chatbox AI quota left this month.",
   "You have unsaved changes. Exiting will discard these changes.": "You have unsaved changes. Exiting will discard these changes.",
