--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} archivo(s) no compatible(s): {{files}}. Formatos compatibles: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} archivo(s) en cola para el análisis del servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
+  "{{count}} ref": "{{count}} ref",
   "A cozy coffee shop interior": "Interior de una cafetería acogedora",
+  "A cute rabbit in Pixar animation style": "Un conejo adorable al estilo de animación de Pixar",
   "A futuristic city with flying cars": "Una ciudad futurista con coches voladores",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ya existe un proveedor con esta ID. Si continúa, se sobrescribirá la configuración existente.",
   "A serene mountain landscape at sunset": "Un sereno paisaje de montaña al atardecer",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Automático (Usar modelo de chat)",
   "Auto (Use Chatbox AI)": "Automático (Usar Chatbox AI)",
   "Auto (Use Last Used)": "Automático (Usar el último utilizado)",
+  "Auto Compaction": "Compactación automática",
   "Auto-collapse code blocks": "Auto-ocultar bloques de código",
   "Auto-Generate Chat Titles": "Auto-Generar títulos de chat",
   "Auto-preview artifacts": "Vista previa automática de artefactos",
   "Automatic updates": "Actualizaciones automáticas",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Renderizar automáticamente los artefactos generados (p. ej., HTML con CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Resume y compacta automáticamente el historial de la conversación cuando el tamaño del contexto supera el umbral, preservando la información clave y reduciendo el consumo de tokens.",
   "Azure API Key": "Clave de API de Azure",
   "Azure API Version": "Versión de API de Azure",
   "Azure Dall-E Deployment Name": "Nombre de implementación de Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "Volver al inicio de sesión",
   "Back to Previous": "Volver al anterior",
   "Back to previous message": "Volver al mensaje anterior",
+  "Balanced: Good balance between cost and context preservation": "Equilibrado: Buen equilibrio entre el coste y la preservación del contexto",
   "Beta updates": "Actualizaciones beta",
   "Binary/executable files are not supported": "Archivos binarios/ejecutables no son compatibles",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search se proporciona de forma gratuita, pero puede tener limitaciones y está sujeto a cambios por parte de Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "Contraer",
   "Coming soon": "Próximamente",
   "Command": "Comando",
+  "Compacting conversation...": "Compactando conversación...",
+  "Compacting...": "Compactando...",
+  "Compaction failed": "Falló la compactación",
+  "Compaction Threshold": "Umbral de compactación",
   "Completed": "Completado",
   "Compress Conversation": "Comprimir Conversación",
   "Compression completed successfully!": "¡Compresión completada con éxito!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La conexión a {{aiProvider}} falló. Esto suele ocurrir debido a una configuración incorrecta o problemas de cuenta de {{aiProvider}}. Por favor, <buttonOpenSettings>verifique sus ajustes</buttonOpenSettings> y verifique el estado de su cuenta de {{aiProvider}}, o compre una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos los modelos avanzados al instante sin necesidad de configuración.",
   "Content": "Contenido",
   "Context": "Contexto",
+  "Context Management": "Gestión del contexto",
   "Context messages": "Mensajes en contexto",
+  "Context Priority: Preserves more context, uses more tokens": "Prioridad de contexto: Preserva más contexto, consume más tokens",
   "Context Window": "Ventana de contexto",
+  "Context window unknown for this model": "Ventana de contexto desconocida para este modelo",
   "Continue Editing": "Continuar editando",
   "Continue this thread": "Continuar este hilo",
   "Continue this Thread": "Continuar este hilo",
@@ -188,6 +200,8 @@
   "copy": "Copiar",
   "Copy": "Copiar",
   "Copy reasoning content": "Copiar contenido de razonamiento",
+  "Cost": "Costo",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Prioridad de costo: Compacta anticipadamente para ahorrar tokens, puede perder algo de contexto.",
   "Create": "Crear",
   "Create a New Conversation": "Crear una nueva conversación",
   "Create a New Image-Creator Conversation": "Crear una nueva conversación de Creador de Imágenes",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Eliminar la sesión actual",
   "Delete File": "Eliminar Archivo",
   "Delete Knowledge Base": "Eliminar Base de conocimiento",
+  "Delete Summary": "Eliminar resumen",
   "Delete this record?": "¿Eliminar este registro?",
+  "Deleting this summary will restore original messages to context calculation.": "Eliminar este resumen restaurará los mensajes originales al cálculo del contexto.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Desplegar contenido HTML en EdgeOne Pages y obtener una URL pública accesible.",
   "Describe the image you want to create...": "Describe la imagen que quieres crear...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Describe la imagen que quieres generar. Sé lo más detallado posible para obtener los mejores resultados.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "p. ej. 128000",
   "e.g. 4096": "p. ej. 4096",
   "e.g., Model Name, Current Date": "p. ej., Nombre del modelo, Fecha actual",
+  "Earlier messages summarized": "Mensajes anteriores resumidos",
   "Easy Access": "Acceso fácil",
   "edit": "Editar",
   "Edit": "Editar",
@@ -353,6 +370,7 @@
   "Get License": "Obtener licencia",
   "get more": "obtener más",
   "Github": "Github",
+  "Go to Image Creator": "Ir al Generador de imágenes",
   "Google Gemini API Compatible": "Compatible con API de Google Gemini",
   "Harmful or offensive content": "Contenido nocivo o ofensivo",
   "Hassle-free setup": "Configuración sin complicaciones",
@@ -744,6 +762,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "El archivo que envió ha expirado. Para proteger su privacidad, se han borrado todos los datos de caché relacionados con el archivo. Debe crear una nueva conversación o actualizar el contexto, y luego enviar el archivo nuevamente.",
   "The Image Creator plugin has been activated for the current conversation": "El complemento Creador de Imágenes ha sido activado para la conversación actual",
   "The license key you entered is invalid. Please check your license key and try again.": "La clave de licencia que ha introducido no es válida. Por favor, verifique su clave de licencia e inténtelo de nuevo.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "El porcentaje de uso de la ventana de contexto que activa la compactación automática. Los valores más bajos ahorran tokens, pero pueden perder contexto antes.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "El parámetro topP controla la diversidad de las respuestas de la AI: los valores más bajos hacen que la salida sea más enfocada y predecible, mientras que los valores más altos permiten respuestas más variadas y creativas.",
   "Theme": "Tema",
   "Thinking": "Pensando",
@@ -754,12 +773,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Esfuerzo de Pensamiento solo funciona para modelos OpenAI de la serie o",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Servicio de análisis en la nube de terceros, compatible con PDF y la mayoría de los archivos de Office. Requiere un token de API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Esta acción no se puede deshacer. Todos los documentos y sus incrustaciones se eliminarán permanentemente.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Esta sesión de imagen ya no está activa. Por favor, utiliza el nuevo Generador de Imágenes para la generación de imágenes.",
   "This license key has reached the activation limit": "Esta clave de licencia ha alcanzado el límite de activación",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Esta clave de licencia ha alcanzado el límite de activación, <a>haga clic aquí</a> para gestionar la licencia y los dispositivos para desactivar dispositivos antiguos.",
   "This license key has reached the activation limit.": "Esta clave de licencia ha alcanzado el límite de activación.",
   "This model does not support tool use": "Este modelo no admite el uso de herramientas",
   "This model does not support vision": "Este modelo no admite visión",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Este servidor permite a los LLM recuperar y procesar contenido de páginas web, convirtiendo HTML a markdown para un consumo más fácil.",
+  "This session": "Esta sesión",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Esto escaneará todas las conversaciones almacenadas y reconstruirá la lista de conversaciones. Esta operación borrará la lista actual y puede tardar un momento.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Esto resumirá la conversación actual y comenzará un nuevo hilo con el contexto comprimido. ¿Continuar?",
   "Thread History": "Historial de hilos",
@@ -833,6 +854,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Bienvenido a Chatbox AI",
   "What can I help you with today?": "¿En qué puedo ayudarte hoy?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Cuando está habilitado, las conversaciones se resumirán automáticamente para gestionar el uso de la ventana de contexto.",
   "Yes": "Sí",
   "You are already a Premium user": "Ya eres un usuario Premium",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Ha excedido el límite de tasa para el servicio de Chatbox AI. Por favor, inténtelo de nuevo más tarde.",
