--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fichier(s) non pris en charge : {{files}}. Formats pris en charge : {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fichier(s) en attente d'analyse par le serveur",
   "{{count}} MCP servers imported": "{{count}} serveurs MCP importés",
+  "{{count}} ref": "{{count}} réf.",
   "A cozy coffee shop interior": "Un intérieur de café chaleureux",
+  "A cute rabbit in Pixar animation style": "Un lapin mignon dans le style d'animation Pixar",
   "A futuristic city with flying cars": "Une ville futuriste avec des voitures volantes",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un fournisseur avec cet ID existe déjà. Continuer écrasera la configuration existante.",
   "A serene mountain landscape at sunset": "Un paysage de montagne serein au coucher du soleil",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Auto (Utiliser le modèle de discussion)",
   "Auto (Use Chatbox AI)": "Auto (Utiliser Chatbox AI)",
   "Auto (Use Last Used)": "Auto (Utiliser le dernier utilisé)",
+  "Auto Compaction": "Compaction automatique",
   "Auto-collapse code blocks": "Réduire automatiquement les blocs de code",
   "Auto-Generate Chat Titles": "Auto-Générer les titres des conversations",
   "Auto-preview artifacts": "Aperçu automatique des artefacts",
   "Automatic updates": "Mises à jour automatiques",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Rendu automatique des artefacts générés (par exemple, HTML avec CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Résume et compacte automatiquement l'historique de la conversation lorsque la taille du contexte dépasse le seuil, préservant les informations clés tout en réduisant l'utilisation des jetons.",
   "Azure API Key": "Clé API Azure",
   "Azure API Version": "Version de l'API Azure",
   "Azure Dall-E Deployment Name": "Nom du déploiement du modèle Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "Retour à la connexion",
   "Back to Previous": "Retour au Sujet Précédent",
   "Back to previous message": "Retour au message précédent",
+  "Balanced: Good balance between cost and context preservation": "Équilibré : bon équilibre entre le coût et la préservation du contexte",
   "Beta updates": "Mises à jour bêta",
   "Binary/executable files are not supported": "Fichiers binaires/exécutables non pris en charge",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "La recherche Bing est fournie gratuitement, mais elle peut avoir des limitations et est sujette à modification par Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "Réduire",
   "Coming soon": "Bientôt disponible",
   "Command": "Commande",
+  "Compacting conversation...": "Compactage de la conversation...",
+  "Compacting...": "Compression...",
+  "Compaction failed": "Échec de la compaction",
+  "Compaction Threshold": "Seuil de compaction",
   "Completed": "Terminé",
   "Compress Conversation": "Compresser la conversation",
   "Compression completed successfully!": "Compression terminée avec succès !",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "La connexion à {{aiProvider}} a échoué. Cela se produit généralement en raison d'une configuration incorrecte ou de problèmes de compte {{aiProvider}}. Veuillez <buttonOpenSettings>vérifier vos paramètres</buttonOpenSettings> et vérifier le statut de votre compte {{aiProvider}}, ou achetez une <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> pour débloquer instantanément tous les modèles avancés sans aucune configuration.",
   "Content": "Contenu",
   "Context": "Contexte",
+  "Context Management": "Gestion du contexte",
   "Context messages": "Messages de contexte",
+  "Context Priority: Preserves more context, uses more tokens": "Priorité au contexte : préserve davantage de contexte, utilise plus de tokens",
   "Context Window": "Fenêtre de contexte",
+  "Context window unknown for this model": "Fenêtre de contexte inconnue pour ce modèle",
   "Continue Editing": "Continuer l'édition",
   "Continue this thread": "Continuer ce sujet",
   "Continue this Thread": "Continuer ce Sujet",
@@ -188,6 +200,8 @@
   "copy": "Copier",
   "Copy": "Copier",
   "Copy reasoning content": "Copier le contenu du raisonnement",
+  "Cost": "Coût",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Priorité au coût : Compacte tôt pour économiser des tokens, peut perdre du contexte",
   "Create": "Créer",
   "Create a New Conversation": "Créer une nouvelle conversation",
   "Create a New Image-Creator Conversation": "Créer une nouvelle conversation avec Image Creator",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Supprimer la session actuelle",
   "Delete File": "Supprimer le fichier",
   "Delete Knowledge Base": "Supprimer la base de connaissances",
+  "Delete Summary": "Supprimer le résumé",
   "Delete this record?": "Supprimer cet enregistrement ?",
+  "Deleting this summary will restore original messages to context calculation.": "Supprimer ce résumé rétablira les messages originaux dans le calcul du contexte.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Déployer du contenu HTML vers EdgeOne Pages et obtenir une URL publique accessible.",
   "Describe the image you want to create...": "Décrivez l'image que vous souhaitez créer...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Décrivez l'image que vous souhaitez générer. Soyez aussi précis que possible pour obtenir les meilleurs résultats.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "par ex. 128000",
   "e.g. 4096": "par ex. 4096",
   "e.g., Model Name, Current Date": "par exemple, Nom du Modèle, Date Actuelle",
+  "Earlier messages summarized": "Messages précédents résumés",
   "Easy Access": "Accès facile",
   "edit": "Modifier",
   "Edit": "Modifier",
@@ -353,6 +370,7 @@
   "Get License": "Obtenir une licence",
   "get more": "Obtenir plus",
   "Github": "Github",
+  "Go to Image Creator": "Accéder au Créateur d'images",
   "Google Gemini API Compatible": "Compatible avec l'API Google Gemini",
   "Harmful or offensive content": "Contenu nocif ou offensant",
   "Hassle-free setup": "Configuration sans problème",
@@ -745,6 +763,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Le fichier que vous avez envoyé a expiré. Pour protéger votre vie privée, toutes les données de cache liées aux fichiers ont été effacées. Vous devez créer une nouvelle conversation ou actualiser le contexte, puis renvoyer le fichier.",
   "The Image Creator plugin has been activated for the current conversation": "Le plugin Image Creator a été activé pour la conversation actuelle",
   "The license key you entered is invalid. Please check your license key and try again.": "La clé de licence que vous avez saisie est invalide. Veuillez vérifier votre clé de licence et réessayer.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "Le pourcentage d'utilisation de la fenêtre de contexte qui déclenche le compactage automatique. Des valeurs plus basses économisent des jetons mais peuvent faire perdre le contexte plus tôt.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "Le paramètre topP contrôle la diversité des réponses de l'AI : les valeurs inférieures rendent la sortie plus ciblée et prévisible, tandis que les valeurs supérieures permettent des réponses plus variées et créatives.",
   "Theme": "Thème",
   "Thinking": "Réflexion",
@@ -755,12 +774,14 @@
   "Thinking Effort only works for OpenAI o-series models": "L'Effort de réflexion ne fonctionne que pour les modèles OpenAI de la série o.",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Service d'analyse cloud tiers, prend en charge les fichiers PDF et la plupart des fichiers Office. Nécessite un jeton d'API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Cette action est irréversible. Tous les documents et leurs intégrations seront supprimés définitivement.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Cette session d'images n'est plus active. Veuillez utiliser le nouveau Créateur d'images pour la génération d'images.",
   "This license key has reached the activation limit": "Cette clé de licence a atteint la limite d'activation",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Cette clé de licence a atteint la limite d'activation, <a>cliquez ici</a> pour gérer la licence et les appareils pour désactiver les anciens appareils.",
   "This license key has reached the activation limit.": "Cette clé de licence a atteint la limite d'activation.",
   "This model does not support tool use": "Ce modèle ne prend pas en charge l'utilisation d'outils",
   "This model does not support vision": "Ce modèle ne prend pas en charge la vision",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Ce serveur permet aux LLMs de récupérer et de traiter le contenu des pages web, en convertissant le HTML en markdown pour une consommation plus facile.",
+  "This session": "Cette session",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Cela va scanner toutes les conversations enregistrées et reconstruire la liste des conversations. Cette opération effacera la liste actuelle et pourrait prendre un instant.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Cela va résumer la conversation actuelle et démarrer un nouveau fil de discussion avec le contexte compressé. Continuer ?",
   "Thread History": "Historique des Sujets",
@@ -834,6 +855,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Bienvenue sur Chatbox AI",
   "What can I help you with today?": "Comment puis-je vous aider aujourd'hui?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Lorsqu'activée, les conversations seront automatiquement résumées pour gérer l'utilisation de la fenêtre de contexte.",
   "Yes": "Oui",
   "You are already a Premium user": "Vous êtes déjà un utilisateur Premium",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Vous avez dépassé la limite de taux pour le service Chatbox AI. Veuillez réessayer plus tard.",
