--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) non supportati: {{files}}. Formati supportati: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} file messi in coda per l'elaborazione del server",
   "{{count}} MCP servers imported": "{{count}} server MCP importati",
+  "{{count}} ref": "{{count}} rif.",
   "A cozy coffee shop interior": "Interno di un'accogliente caffetteria",
+  "A cute rabbit in Pixar animation style": "Un tenero coniglietto in stile animazione Pixar",
   "A futuristic city with flying cars": "Una città futuristica con auto volanti",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un provider con questo ID esiste già. Continuare sovrascriverà la configurazione esistente.",
   "A serene mountain landscape at sunset": "Un sereno paesaggio montano al tramonto",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Auto (Usa il modello di chat)",
   "Auto (Use Chatbox AI)": "Automatico (Utilizza Chatbox AI)",
   "Auto (Use Last Used)": "Auto (Usa l'ultimo utilizzato)",
+  "Auto Compaction": "Compattazione automatica",
   "Auto-collapse code blocks": "Auto-nascondi blocchi di codice",
   "Auto-Generate Chat Titles": "Auto-Genera titoli di chat",
   "Auto-preview artifacts": "Anteprima automatica degli artefatti",
   "Automatic updates": "Aggiornamenti automatici",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Renderizza automaticamente gli artefatti generati (es. HTML con CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Riassumi e compatta automaticamente la cronologia della conversazione quando la dimensione del contesto supera la soglia, preservando le informazioni chiave e riducendo l'utilizzo dei token.",
   "Azure API Key": "Chiave API di Azure",
   "Azure API Version": "Versione API di Azure",
   "Azure Dall-E Deployment Name": "Nome di distribuzione Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "Torna al Login",
   "Back to Previous": "Torna al precedente",
   "Back to previous message": "Torni al messaggio precedente",
+  "Balanced: Good balance between cost and context preservation": "Bilanciato: Buon equilibrio tra costi e conservazione del contesto",
   "Beta updates": "Aggiornamenti beta",
   "Binary/executable files are not supported": "I file binari/eseguibili non sono supportati",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search è fornito per uso gratuito, ma potrebbe avere delle limitazioni ed è soggetto a modifiche da parte di Microsoft.",
@@ -153,6 +158,10 @@
   "Collapse": "Comprimi",
   "Coming soon": "Prossimamente",
   "Command": "Comando",
+  "Compacting conversation...": "Compattamento della conversazione...",
+  "Compacting...": "Compattazione in corso...",
+  "Compaction failed": "Compattazione fallita",
+  "Compaction Threshold": "Soglia di compattazione",
   "Completed": "Completato",
   "Compress Conversation": "Comprimi Conversazione",
   "Compression completed successfully!": "Compressione completata con successo!",
@@ -170,8 +179,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Connessione a {{aiProvider}} fallita. Questo si verifica tipicamente a causa di una configurazione errata o problemi con l'account {{aiProvider}}. Per favore, <buttonOpenSettings>controlla le tue impostazioni</buttonOpenSettings> e verifica lo stato del tuo account {{aiProvider}}, o acquista una <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> per sbloccare tutti i modelli avanzati istantaneamente senza alcuna configurazione.",
   "Content": "Contenuto",
   "Context": "Contesto",
+  "Context Management": "Gestione del contesto",
   "Context messages": "Messaggi di contesto",
+  "Context Priority: Preserves more context, uses more tokens": "Priorità contesto: Preserva più contesto, utilizza più token.",
   "Context Window": "Finestra di Contesto",
+  "Context window unknown for this model": "Finestra di contesto sconosciuta per questo modello",
   "Continue Editing": "Ricomincia a Modificare",
   "Continue this thread": "Continua questo thread",
   "Continue this Thread": "Continua questo thread",
@@ -187,6 +199,8 @@
   "copy": "Copia",
   "Copy": "Copia",
   "Copy reasoning content": "Copia contenuto del ragionamento",
+  "Cost": "Costo",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Priorità di costo: compatta in anticipo per risparmiare token, potrebbe perdere parte del contesto",
   "Create": "Crea",
   "Create a New Conversation": "Crea una nuova conversazione",
   "Create a New Image-Creator Conversation": "Crea una nuova conversazione Image-Creator",
@@ -228,7 +242,9 @@
   "Delete Current Session": "Elimina sessione corrente",
   "Delete File": "Elimina File",
   "Delete Knowledge Base": "Elimina Base di conoscenza",
+  "Delete Summary": "Elimina riepilogo",
   "Delete this record?": "Eliminare questo record?",
+  "Deleting this summary will restore original messages to context calculation.": "L'eliminazione di questo riassunto ripristinerà i messaggi originali nel calcolo del contesto.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuire contenuto HTML su EdgeOne Pages e ottenere un URL pubblico accessibile.",
   "Describe the image you want to create...": "Descrivi l'immagine che desideri creare...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Descrivi l'immagine che vuoi generare. Sii il più dettagliato possibile per ottenere i migliori risultati.",
@@ -256,6 +272,7 @@
   "e.g. 128000": "es. 128000",
   "e.g. 4096": "es. 4096",
   "e.g., Model Name, Current Date": "es. Nome del modello, Data attuale",
+  "Earlier messages summarized": "Messaggi precedenti riassunti",
   "Easy Access": "Accesso facile",
   "edit": "Modifica",
   "Edit": "Modifica",
@@ -352,6 +369,7 @@
   "Get License": "Ottieni licenza",
   "get more": "Ottieni di più",
   "Github": "Github",
+  "Go to Image Creator": "Vai al Creatore di immagini",
   "Google Gemini API Compatible": "Compatibile con API Google Gemini",
   "Harmful or offensive content": "Contenuto nocivo o offensivo",
   "Hassle-free setup": "Configurazione senza problemi",
@@ -743,6 +761,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Il file che hai inviato è scaduto. Per proteggere la tua privacy, tutti i dati della cache relativi al file sono stati cancellati. Devi creare una nuova conversazione o aggiornare il contesto, e poi inviare nuovamente il file.",
   "The Image Creator plugin has been activated for the current conversation": "Il plugin Image Creator è stato attivato per la conversazione corrente",
   "The license key you entered is invalid. Please check your license key and try again.": "La chiave di licenza che hai inserito non è valida. Per favore, controlla la tua chiave di licenza e riprova.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "La percentuale di utilizzo della finestra di contesto che attiva la compattazione automatica. Valori più bassi risparmiano token, ma potrebbero far perdere il contesto più precocemente.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "Il parametro topP controlla la diversità delle risposte dell'AI: valori più bassi rendono l'output più focalizzato e prevedibile, mentre valori più alti consentono risposte più varie e creative.",
   "Theme": "Tema",
   "Thinking": "Pensando",
@@ -753,12 +772,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Lo Sforzo di Pensiero funziona solo per i modelli OpenAI della serie o",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Servizio di parsing cloud di terze parti, supporta PDF e la maggior parte dei file Office. Richiede un token API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Questa azione non può essere annullata. Tutti i documenti e i loro embedding verranno eliminati definitivamente.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Questa sessione di immagini non è più attiva. Per favore, usa il nuovo Image Creator per la generazione di immagini.",
   "This license key has reached the activation limit": "Questa chiave di licenza ha raggiunto il limite di attivazione",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Questa chiave di licenza ha raggiunto il limite di attivazione, <a>clicca qui</a> per gestire la licenza e i dispositivi per disattivare i vecchi dispositivi.",
   "This license key has reached the activation limit.": "Questa chiave di licenza ha raggiunto il limite di attivazioni.",
   "This model does not support tool use": "Questo modello non supporta l'uso di strumenti",
   "This model does not support vision": "Questo modello non supporta la visione",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Questo server consente agli LLM di recuperare ed elaborare contenuti da pagine web, convertendo l'HTML in markdown per un consumo più semplice.",
+  "This session": "Questa sessione",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Questo scansionerà tutte le conversazioni memorizzate e ricostruirà l'elenco delle conversazioni. Questa operazione cancellerà l'elenco corrente e potrebbe richiedere un momento.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Questo riassumerà la conversazione attuale e avvierà una nuova discussione con il contesto compresso. Continuare?",
   "Thread History": "Cronologia thread",
@@ -831,6 +852,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Benvenuti su Chatbox AI",
   "What can I help you with today?": "Come posso aiutarti oggi?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Quando abilitato, le conversazioni verranno riassunte automaticamente per gestire l'utilizzo della finestra di contesto.",
   "Yes": "Sì",
   "You are already a Premium user": "Sei già un utente Premium",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Hai superato il limite di utilizzo per il servizio Chatbox AI. Per favore, riprova più tardi.",
