--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}個のファイルはサポートされていません: {{files}}。サポートされている形式: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 個のファイルがサーバー解析のためキューに登録されました",
   "{{count}} MCP servers imported": "{{count}} MCPサーバーがインポートされました",
+  "{{count}} ref": "{{count}} 参照",
   "A cozy coffee shop interior": "居心地の良いコーヒーショップの店内",
+  "A cute rabbit in Pixar animation style": "ピクサーアニメ風の可愛いウサギ",
   "A futuristic city with flying cars": "空飛ぶ車が走る未来都市",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "このIDの提供方が既に存在します。続行すると、既存の設定が上書きされます。",
   "A serene mountain landscape at sunset": "夕暮れ時の穏やかな山の風景",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "自動（チャットモデルを使用）",
   "Auto (Use Chatbox AI)": "自動 (Chatbox AI を使用)",
   "Auto (Use Last Used)": "自動（最後に使用したものを使用）",
+  "Auto Compaction": "自動圧縮",
   "Auto-collapse code blocks": "コードブロックを自動的に折りたたむ",
   "Auto-Generate Chat Titles": "チャットのタイトルを自動生成",
   "Auto-preview artifacts": "アーティファクトを自動プレビュー",
   "Automatic updates": "自動更新",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "生成されたアーティファクト（HTML、CSS、JS、Tailwindなど）を自動的にレンダリング",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "コンテキストサイズがしきい値を超えた際に、会話履歴を自動的に要約・圧縮します。重要な情報を保持しながら、トークンの使用量を削減します。",
   "Azure API Key": "Azure API キー",
   "Azure API Version": "Azure APIバージョン",
   "Azure Dall-E Deployment Name": "Azure Dall-E モデルデプロイメント名",
@@ -95,6 +99,7 @@
   "Back to Login": "ログインに戻る",
   "Back to Previous": "前のスレッドに戻る",
   "Back to previous message": "前のメッセージに戻る",
+  "Balanced: Good balance between cost and context preservation": "バランス：コストとコンテキスト保持の良いバランス",
   "Beta updates": "ベータ更新",
   "Binary/executable files are not supported": "バイナリ/実行可能ファイルはサポートされていません",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing検索は無料で提供されていますが、制限がある場合があり、Microsoftによって変更される場合があります。",
@@ -154,6 +159,10 @@
   "Collapse": "折りたたむ",
   "Coming soon": "近日公開",
   "Command": "コマンド",
+  "Compacting conversation...": "会話を圧縮中...",
+  "Compacting...": "圧縮中...",
+  "Compaction failed": "圧縮に失敗しました",
+  "Compaction Threshold": "圧縮のしきい値",
   "Completed": "完了",
   "Compress Conversation": "会話を圧縮",
   "Compression completed successfully!": "圧縮が正常に完了しました！",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}への接続に失敗しました。これは通常、設定の誤りや{{aiProvider}}アカウントの問題によるものです。設定を確認して{{aiProvider}}アカウントのステータスを確認するか、<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>を購入して、すべての高度なモデルを即座に設定なしでロック解除してください。",
   "Content": "コンテンツ",
   "Context": "コンテキスト",
+  "Context Management": "コンテキスト管理",
   "Context messages": "コンテキストメッセージ数",
+  "Context Priority: Preserves more context, uses more tokens": "コンテキスト優先：より多くのコンテキストを保持し、より多くのトークンを使用します",
   "Context Window": "コンテキストウィンドウ",
+  "Context window unknown for this model": "このモデルのコンテキストウィンドウは不明です",
   "Continue Editing": "編集を続ける",
   "Continue this thread": "このスレッドを続ける",
   "Continue this Thread": "このスレッドを続ける",
@@ -188,6 +200,8 @@
   "copy": "コピー",
   "Copy": "コピー",
   "Copy reasoning content": "推論内容をコピー",
+  "Cost": "コスト",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "コスト優先：トークンを節約するために早めに圧縮します。一部のコンテキストが失われる可能性があります。",
   "Create": "作成",
   "Create a New Conversation": "新しい会話を作成",
   "Create a New Image-Creator Conversation": "新しい画像作成会話を作成",
@@ -229,7 +243,9 @@
   "Delete Current Session": "現在のセッションを削除",
   "Delete File": "ファイルを削除",
   "Delete Knowledge Base": "知識ベースを削除",
+  "Delete Summary": "要約を削除",
   "Delete this record?": "この記録を削除しますか？",
+  "Deleting this summary will restore original messages to context calculation.": "この要約を削除すると、元のメッセージがコンテキスト計算に復元されます。",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTMLコンテンツをEdgeOne Pagesにデプロイし、アクセス可能な公開URLを取得する。",
   "Describe the image you want to create...": "作成したい画像を説明してください...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "生成したい画像を説明してください。最良の結果を得るために、できるだけ詳細に入力してください。",
@@ -257,6 +273,7 @@
   "e.g. 128000": "例: 128000",
   "e.g. 4096": "例: 4096",
   "e.g., Model Name, Current Date": "例：モデル名、現在の日付",
+  "Earlier messages summarized": "以前のメッセージを要約しました",
   "Easy Access": "簡単アクセス",
   "edit": "編集",
   "Edit": "編集",
@@ -353,6 +370,7 @@
   "Get License": "ライセンスを取得",
   "get more": "もっと見る",
   "Github": "Github",
+  "Go to Image Creator": "画像生成へ移動",
   "Google Gemini API Compatible": "Google Gemini API互換",
   "Harmful or offensive content": "有害または不適切な内容",
   "Hassle-free setup": "手間いらずのセットアップ",
@@ -745,6 +763,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "送信したファイルの有効期限が切れました。プライバシーを保護するため、すべてのファイル関連のキャッシュデータがクリアされました。新しい会話を作成するか、コンテキストをリフレッシュしてから、ファイルを再度送信する必要があります。",
   "The Image Creator plugin has been activated for the current conversation": "画像作成プラグインが現在の会話で有効化されました",
   "The license key you entered is invalid. Please check your license key and try again.": "入力したライセンスキーが無効です。ライセンスキーを確認してもう一度お試しください。",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "自動圧縮をトリガーするコンテキストウィンドウの使用率。低い値に設定するとトークンを節約できますが、より早い段階で文脈が失われる可能性があります。",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topPパラメーターはAIの応答の多様性を制御します。値が低いほど出力はより焦点を絞り予測可能になりますが、値が高いほどより多様で創造的な返答が可能になります。",
   "Theme": "テーマ",
   "Thinking": "考え中",
@@ -755,12 +774,14 @@
   "Thinking Effort only works for OpenAI o-series models": "思考努力は OpenAI o-series models にのみ対応しています",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "サードパーティのクラウド解析サービス、PDF およびほとんどの Office ファイルをサポート。API トークンが必要です。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "この操作は元に戻せません。すべてのドキュメントとその埋め込みは完全に削除されます。",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "この画像セッションは現在有効ではありません。画像の生成には、新しい Image Creator を使用してください。",
   "This license key has reached the activation limit": "このライセンスキーは有効化制限に達しました",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "このライセンスキーは有効化制限に達しました、古いデバイスを無効化するためにライセンスとデバイスを管理するには<a>ここをクリックして</a>ください。",
   "This license key has reached the activation limit.": "このライセンスキーはアクティベーションの上限に達しました。",
   "This model does not support tool use": "このモデルはツール利用に対応していません",
   "This model does not support vision": "このモデルは視覚に対応していません",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "このサーバーは、LLMがウェブページからコンテンツを取得・処理することを可能にし、HTMLをマークダウンに変換することで、より利用しやすくします。",
+  "This session": "このセッション",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "この操作により、保存されているすべての会話がスキャンされ、会話リストが再構築されます。現在のリストはクリアされ、完了までにしばらく時間がかかる場合があります。",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "これは現在の会話を要約し、圧縮されたコンテキストで新しいスレッドを開始します。続行しますか？",
   "Thread History": "スレッド履歴",
@@ -834,6 +855,7 @@
   "WeChat": "WeChat (ウィーチャット)",
   "Welcome to Chatbox": "Chatbox AIへようこそ",
   "What can I help you with today?": "今日は何をお手伝いしましょうか？",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "有効にすると、コンテキストウィンドウの使用量を管理するために、会話が自動的に要約されます。",
   "Yes": "はい",
   "You are already a Premium user": "あなたはすでにプレミアムユーザーです",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Chatbox AIサービスのレート制限を超過しました。後で再試行してください。",
