--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}개의 파일이 지원되지 않습니다: {{files}}. 지원되는 형식: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}}개 파일이 서버 구문 분석 대기 중입니다.",
   "{{count}} MCP servers imported": "{{count}} MCP 서버 가져옴",
+  "{{count}} ref": "{{count}} 참조",
   "A cozy coffee shop interior": "아늑한 카페 인테리어",
+  "A cute rabbit in Pixar animation style": "픽사 애니메이션 스타일의 귀여운 토끼",
   "A futuristic city with flying cars": "날아다니는 자동차가 있는 미래 도시",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "이 ID를 가진 제공자가 이미 존재합니다. 계속하면 기존 구성이 덮어쓰여집니다.",
   "A serene mountain landscape at sunset": "해 질 녘의 고요한 산 풍경",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "자동 (채팅 모델 사용)",
   "Auto (Use Chatbox AI)": "자동 (Chatbox AI 사용)",
   "Auto (Use Last Used)": "자동 (마지막 사용 모델 사용)",
+  "Auto Compaction": "자동 압축",
   "Auto-collapse code blocks": "코드 블록 자동 숨기기",
   "Auto-Generate Chat Titles": "채팅 제목 자동 생성",
   "Auto-preview artifacts": "아티팩트 자동 미리보기",
   "Automatic updates": "자동 업데이트",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "생성된 아티팩트(예: CSS, JS, Tailwind가 포함된 HTML)를 자동으로 렌더링",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "컨텍스트 크기가 임계값을 초과할 때 대화 기록을 자동으로 요약하고 압축하여, 핵심 정보를 보존하면서 토큰 사용량을 줄입니다.",
   "Azure API Key": "Azure API 키",
   "Azure API Version": "Azure API 버전",
   "Azure Dall-E Deployment Name": "Azure Dall-E 모델 배포 이름",
@@ -95,6 +99,7 @@
   "Back to Login": "로그인으로 돌아가기",
   "Back to Previous": "이전으로 돌아가기",
   "Back to previous message": "이전 메시지로 돌아가기",
+  "Balanced: Good balance between cost and context preservation": "균형: 비용과 문맥 유지 사이의 적절한 균형",
   "Beta updates": "베타 업데이트",
   "Binary/executable files are not supported": "바이너리/실행 파일은 지원되지 않습니다",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "빙 검색은 무료로 제공되지만, 제한 사항이 있을 수 있으며 Microsoft에 의해 변경될 수 있습니다.",
@@ -154,6 +159,10 @@
   "Collapse": "축소",
   "Coming soon": "곧 출시 예정",
   "Command": "명령",
+  "Compacting conversation...": "대화 압축 중...",
+  "Compacting...": "압축 중...",
+  "Compaction failed": "압축 실패",
+  "Compaction Threshold": "압축 임계값",
   "Completed": "완료됨",
   "Compress Conversation": "대화 압축",
   "Compression completed successfully!": "압축이 성공적으로 완료되었습니다!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "{{aiProvider}}에 연결하지 못했습니다. 일반적으로 잘못된 구성 또는 {{aiProvider}} 계정 문제로 발생합니다. <buttonOpenSettings>설정을 확인</buttonOpenSettings>하고 {{aiProvider}} 계정 상태를 확인하거나 <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>를 구매하여 모든 고급 모델을 즉시 구성 없이 잠금 해제하세요.",
   "Content": "콘텐츠",
   "Context": "컨텍스트",
+  "Context Management": "컨텍스트 관리",
   "Context messages": "컨텍스트 메시지 수",
+  "Context Priority: Preserves more context, uses more tokens": "컨텍스트 우선: 더 많은 컨텍스트를 유지하며, 더 많은 토큰을 사용합니다",
   "Context Window": "컨텍스트 창",
+  "Context window unknown for this model": "이 모델의 컨텍스트 윈도우 정보를 알 수 없습니다.",
   "Continue Editing": "계속 편집",
   "Continue this thread": "이 스레드 계속하기",
   "Continue this Thread": "이 스레드 계속하기",
@@ -188,6 +200,8 @@
   "copy": "복사",
   "Copy": "복사",
   "Copy reasoning content": "추론 내용 복사",
+  "Cost": "비용",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "비용 우선: 토큰을 절약하기 위해 조기에 압축하며, 일부 문맥이 누락될 수 있습니다.",
   "Create": "생성",
   "Create a New Conversation": "새 대화 만들기",
   "Create a New Image-Creator Conversation": "새 이미지 생성기 대화 만들기",
@@ -229,7 +243,9 @@
   "Delete Current Session": "현재 세션 삭제",
   "Delete File": "파일 삭제",
   "Delete Knowledge Base": "지식 기반 삭제",
+  "Delete Summary": "요약 삭제",
   "Delete this record?": "이 기록을 삭제하시겠습니까?",
+  "Deleting this summary will restore original messages to context calculation.": "이 요약을 삭제하면 원본 메시지가 컨텍스트 계산에 복원됩니다.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML 콘텐츠를 EdgeOne Pages에 배포하고 접근 가능한 공개 URL을 획득합니다.",
   "Describe the image you want to create...": "생성하고 싶은 이미지를 설명해 주세요...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "생성하고 싶은 이미지를 설명해 주세요. 최상의 결과를 위해 가능한 한 자세히 묘사해 주세요.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "예: 128000",
   "e.g. 4096": "예: 4096",
   "e.g., Model Name, Current Date": "예: 모델 이름, 현재 날짜",
+  "Earlier messages summarized": "이전 메시지 요약됨",
   "Easy Access": "쉬운 액세스",
   "edit": "편집",
   "Edit": "편집",
@@ -353,6 +370,7 @@
   "Get License": "라이선스 가져오기",
   "get more": "추가 구매",
   "Github": "Github",
+  "Go to Image Creator": "이미지 생성기로 이동",
   "Google Gemini API Compatible": "Google Gemini API 호환",
   "Harmful or offensive content": "해로운 또는 비속한 내용",
   "Hassle-free setup": "번거로움 없는 설정",
@@ -745,6 +763,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "보낸 파일이 만료되었습니다. 개인 정보 보호를 위해 모든 파일 관련 캐시 데이터가 지워졌습니다. 새 대화를 만들거나 컨텍스트를 새로 고친 후 파일을 다시 보내야 합니다.",
   "The Image Creator plugin has been activated for the current conversation": "이 대화에 이미지 생성기 플러그인이 활성화되었습니다",
   "The license key you entered is invalid. Please check your license key and try again.": "입력한 라이선스 키가 유효하지 않습니다. 라이선스 키를 확인하고 다시 시도하세요.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "자동 압축이 실행되는 컨텍스트 창 사용량의 백분율입니다. 값이 낮을수록 토큰은 절약되지만 컨텍스트를 더 일찍 유실할 수 있습니다.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP 매개변수는 AI 응답의 다양성을 조절합니다: 낮은 값은 결과물을 더 집중적이고 예측 가능하게 만들고, 높은 값은 더 다양하고 창의적인 답변을 가능하게 합니다.",
   "Theme": "테마",
   "Thinking": "생각 중",
@@ -755,12 +774,14 @@
   "Thinking Effort only works for OpenAI o-series models": "사고 노력은 OpenAI o-series 모델에서만 작동합니다",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "제3자 클라우드 파싱 서비스, PDF 및 대부분의 Office 파일을 지원합니다. API 토큰이 필요합니다.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "이 작업은 되돌릴 수 없습니다. 모든 문서와 해당 임베딩이 영구적으로 삭제됩니다.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "이 이미지 세션은 더 이상 유효하지 않습니다. 이미지 생성을 위해 새로운 Image Creator를 사용해 주세요.",
   "This license key has reached the activation limit": "이 라이선스 키는 활성화 제한에 도달했습니다.",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "이 라이선스 키는 활성화 제한에 도달했습니다. 이전 기기를 비활성화하려면 <a>여기를 클릭</a>하여 라이선스 및 기기를 관리하세요.",
   "This license key has reached the activation limit.": "이 라이선스 키는 활성화 제한에 도달했습니다.",
   "This model does not support tool use": "이 모델은 도구 사용을 지원하지 않습니다",
   "This model does not support vision": "이 모델은 시각을 지원하지 않습니다",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "이 서버는 LLM이 웹 페이지에서 콘텐츠를 검색하고 처리할 수 있도록 지원하며, HTML을 마크다운으로 변환하여 더 쉽게 활용할 수 있도록 합니다.",
+  "This session": "이 세션",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "저장된 모든 대화를 스캔하여 대화 목록을 재구축합니다. 이 작업은 현재 목록을 지우고 잠시 시간이 걸릴 수 있습니다.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "현재 대화를 요약하고 압축된 컨텍스트로 새 스레드를 시작합니다. 계속하시겠습니까?",
   "Thread History": "스레드 기록",
@@ -834,6 +855,7 @@
   "WeChat": "위챗",
   "Welcome to Chatbox": "Chatbox AI에 오신 것을 환영합니다",
   "What can I help you with today?": "오늘 무엇을 도와드릴까요?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "활성화하면 컨텍스트 창 사용량을 관리하기 위해 대화가 자동으로 요약됩니다.",
   "Yes": "예",
   "You are already a Premium user": "이미 프리미엄 사용자입니다",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Chatbox AI 서비스의 요청 제한을 초과했습니다. 나중에 다시 시도하세요.",
