--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) støttes ikke: {{files}}. Støttede formater: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fil(er) lagt i kø for serveranalyse",
   "{{count}} MCP servers imported": "{{count}} MCP servere importert",
+  "{{count}} ref": "{{count}} ref",
   "A cozy coffee shop interior": "Et koselig kaffebarinteriør",
+  "A cute rabbit in Pixar animation style": "En søt kanin i Pixar-animasjonsstil",
   "A futuristic city with flying cars": "En futuristisk by med flyvende biler",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En tilbyder med denne ID-en finnes allerede. Fortsetter du, vil den eksisterende konfigurasjonen overskrives.",
   "A serene mountain landscape at sunset": "Et fredelig fjellandskap ved solnedgang",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Auto (Bruk chattmodell)",
   "Auto (Use Chatbox AI)": "Auto (Bruk Chatbox AI)",
   "Auto (Use Last Used)": "Auto (Bruk sist brukt)",
+  "Auto Compaction": "Automatisk komprimering",
   "Auto-collapse code blocks": "Skjul kodeblokker automatisk",
   "Auto-Generate Chat Titles": "Generer chattitler automatisk",
   "Auto-preview artifacts": "Automatisk forhåndsvisning av artefakter",
   "Automatic updates": "Automatisk oppdatering",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Gjengi genererte artefakter automatisk (f.eks. HTML med CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Oppsummer og komprimer samtalehistorikken automatisk når kontekststørrelsen overskrider grenseverdien, slik at viktig informasjon bevares samtidig som tokenbruken reduseres.",
   "Azure API Key": "Azure API-nøkkel",
   "Azure API Version": "Azure API-versjon",
   "Azure Dall-E Deployment Name": "Azure Dall-E-distribusjonsnavn",
@@ -95,6 +99,7 @@
   "Back to Login": "Tilbake til innlogging",
   "Back to Previous": "Tilbake til forrige",
   "Back to previous message": "Tilbake til forrige melding",
+  "Balanced: Good balance between cost and context preservation": "Balansert: God balanse mellom kostnad og bevaring av kontekst",
   "Beta updates": "Beta oppdateringer",
   "Binary/executable files are not supported": "Binære/kjørbare filer støttes ikke",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing-søk tilbys gratis, men det kan ha begrensninger og kan endres av Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "Skjul",
   "Coming soon": "Kommer snart",
   "Command": "Kommando",
+  "Compacting conversation...": "Komprimerer samtale...",
+  "Compacting...": "Kompakterer...",
+  "Compaction failed": "Komprimering feilet",
+  "Compaction Threshold": "Terskel for komprimering",
   "Completed": "Fullført",
   "Compress Conversation": "Komprimer samtale",
   "Compression completed successfully!": "Komprimering fullført!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Tilkobling til {{aiProvider}} mislyktes. Dette skjer vanligvis på grunn av feil konfigurasjon eller {{aiProvider}}-konto problemer. Vennligst <buttonOpenSettings>sørg for at innstillingene dine er riktige</buttonOpenSettings> og bekreft statusen for {{aiProvider}}-kontoen din, eller kjøp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> for å låse opp alle avanserte modeller umiddelbart uten noen konfigurasjon.",
   "Content": "Innhold",
   "Context": "Kontekst",
+  "Context Management": "Konteksthåndtering",
   "Context messages": "Kontekstmeldinger",
+  "Context Priority: Preserves more context, uses more tokens": "Kontekstprioritet: Bevarer mer kontekst, bruker flere tokens",
   "Context Window": "Kontekstvindu",
+  "Context window unknown for this model": "Kontekstvindu ukjent for denne modellen",
   "Continue Editing": "Fortsett redigering",
   "Continue this thread": "Fortsett denne tråden",
   "Continue this Thread": "Fortsett denne tråden",
@@ -188,6 +200,8 @@
   "copy": "Kopier",
   "Copy": "Kopier",
   "Copy reasoning content": "Kopier resonneringsinnhold",
+  "Cost": "Kostnad",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Kostnadsprioritet: Komprimerer tidlig for å spare tokens, kan miste noe kontekst.",
   "Create": "Opprett",
   "Create a New Conversation": "Opprett ny samtale",
   "Create a New Image-Creator Conversation": "Opprett en ny bildeskapersamtale",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Slett gjeldende økt",
   "Delete File": "Slett fil",
   "Delete Knowledge Base": "Slett kunnskapsbase",
+  "Delete Summary": "Slett sammendrag",
   "Delete this record?": "Slette denne oppføringen?",
+  "Deleting this summary will restore original messages to context calculation.": "Sletting av dette sammendraget vil gjenopprette de opprinnelige meldingene i kontekstberegningen.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Utplassere HTML-innhold til EdgeOne Pages og oppnå en tilgjengelig offentlig URL.",
   "Describe the image you want to create...": "Beskriv bildet du vil lage...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Beskriv bildet du vil generere. Vær så detaljert som mulig for best mulige resultater.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "f.eks. 128000",
   "e.g. 4096": "f.eks. 4096",
   "e.g., Model Name, Current Date": "f.eks. modellnavn, gjeldende dato",
+  "Earlier messages summarized": "Tidligere meldinger oppsummert",
   "Easy Access": "Enkel tilgang",
   "edit": "Rediger",
   "Edit": "Rediger",
@@ -353,6 +370,7 @@
   "Get License": "Få lisens",
   "get more": "Få mer",
   "Github": "Github",
+  "Go to Image Creator": "Gå til bildegenerator",
   "Google Gemini API Compatible": "Google Gemini API-kompatibel",
   "Harmful or offensive content": "Skadelig eller støtende innhold",
   "Hassle-free setup": "Problemfri oppsett",
@@ -744,6 +762,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Filen du sendte har utløpt. For å beskytte personvernet ditt er all filrelatert hurtigbufferdata slettet. Du må opprette en ny samtale eller oppdatere konteksten, og deretter sende filen på nytt.",
   "The Image Creator plugin has been activated for the current conversation": "Bildegenerator-utvidelsen er aktivert for denne samtalen",
   "The license key you entered is invalid. Please check your license key and try again.": "Lisensnøkkelen du la inn er ugyldig. Vennligst sjekk lisensnøkkelen din og prøv igjen.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "Prosentandelen av bruk av kontekstvinduet som utløser automatisk komprimering. Lavere verdier sparer tokener, men kan føre til at kontekst går tapt tidligere.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP-parameteret kontrollerer mangfoldet av AI-svar: lavere verdier gjør utdataene mer fokuserte og forutsigbare, mens høyere verdier tillater mer varierte og kreative svar.",
   "Theme": "Tema",
   "Thinking": "Tenker",
@@ -754,12 +773,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Tenkeinnsats fungerer bare for OpenAI o-series-modeller",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Tredjeparts skybasert parser-tjeneste, støtter PDF og de fleste Office-filer. Krever API-token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Denne handlingen kan ikke angres. Alle dokumenter og deres embeddings vil bli permanent slettet.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Denne bildeøkten er ikke lenger aktiv. Vennligst bruk den nye bildeoppretteren for bildegenerering.",
   "This license key has reached the activation limit": "Denne lisensnøkkelen har nådd aktiveringsgrensen",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Denne lisensnøkkelen har nådd aktiveringsgrensen, <a>klikk her</a> for å administrere lisens og enheter for å deaktivere gamle enheter.",
   "This license key has reached the activation limit.": "Denne lisensnøkkelen har nådd aktiveringsgrensen.",
   "This model does not support tool use": "Denne modellen støtter ikke verktøybruk",
   "This model does not support vision": "Denne modellen støtter ikke syn",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Denne serveren gjør det mulig for LLM-er å hente og behandle innhold fra nettsider, og konverterer HTML til markdown for enklere konsumering.",
+  "This session": "Denne økten",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Dette vil skanne alle lagrede samtaler og gjenoppbygge samtalelisten. Denne operasjonen vil tømme den gjeldende listen og kan ta et øyeblikk.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Dette vil oppsummere den nåværende samtalen og starte en ny tråd med den komprimerte konteksten. Fortsett?",
   "Thread History": "Trådhistorikk",
@@ -833,6 +854,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Velkommen til Chatbox AI",
   "What can I help you with today?": "Hva kan jeg hjelpe deg med i dag?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Når aktivert, vil samtaler bli automatisk oppsummert for å håndtere bruk av kontekstvindu.",
   "Yes": "Ja",
   "You are already a Premium user": "Du er allerede en Premium-bruker",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Du har overskredet grensen for Chatbox AI-tjenesten. Vennligst prøv igjen senere.",
