--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ficheiro(s) não suportado(s): {{files}}. Formatos suportados: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} ficheiro(s) em fila para análise no servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
+  "{{count}} ref": "{{count}} ref.",
   "A cozy coffee shop interior": "Interior de uma cafetaria acolhedora",
+  "A cute rabbit in Pixar animation style": "Um coelho fofo ao estilo de animação da Pixar",
   "A futuristic city with flying cars": "Uma cidade futurista com carros voadores",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Já existe um fornecedor com este ID. Ao continuar, a configuração existente será substituída.",
   "A serene mountain landscape at sunset": "Uma paisagem de montanha serena ao pôr do sol",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Automático (Usar Modelo de Chat)",
   "Auto (Use Chatbox AI)": "Automático (Usar Chatbox AI)",
   "Auto (Use Last Used)": "Automático (Usar Último Usado)",
+  "Auto Compaction": "Compactação Automática",
   "Auto-collapse code blocks": "Auto-esconder blocos de código",
   "Auto-Generate Chat Titles": "Auto-Gerar títulos de chat",
   "Auto-preview artifacts": "Pré-visualização automática de artefatos",
   "Automatic updates": "Atualizações automáticas",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Renderizar automaticamente artefatos gerados (por exemplo, HTML com CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Resumir e compactar automaticamente o histórico de conversas quando o tamanho do contexto excede o limite, preservando as informações fundamentais e reduzindo a utilização de tokens.",
   "Azure API Key": "Chave da API Azure",
   "Azure API Version": "Versão da API Azure",
   "Azure Dall-E Deployment Name": "Nome de Implantação do Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "Voltar ao Login",
   "Back to Previous": "Voltar ao Anterior",
   "Back to previous message": "Voltar à mensagem anterior",
+  "Balanced: Good balance between cost and context preservation": "Equilibrado: Bom equilíbrio entre custo e preservação do contexto",
   "Beta updates": "Atualizações beta",
   "Binary/executable files are not supported": "Ficheiros binários/executáveis não são suportados",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "A Pesquisa Bing é disponibilizada gratuitamente, mas pode ter limitações e está sujeita a alterações pela Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "Colapsar",
   "Coming soon": "Em breve",
   "Command": "Comando",
+  "Compacting conversation...": "A compactar conversa...",
+  "Compacting...": "A compactar...",
+  "Compaction failed": "A compactação falhou",
+  "Compaction Threshold": "Limite de compactação",
   "Completed": "Concluído",
   "Compress Conversation": "Comprimir Conversa",
   "Compression completed successfully!": "Compressão concluída com sucesso!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "A conexão com {{aiProvider}} falhou. Isso geralmente ocorre devido a configurações incorretas ou problemas de conta {{aiProvider}}. Por favor, <buttonOpenSettings>verifique suas configurações</buttonOpenSettings> e verifique o status de sua conta {{aiProvider}}, ou compre uma <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> para desbloquear todos os modelos avançados instantaneamente sem nenhuma configuração.",
   "Content": "Conteúdo",
   "Context": "Contexto",
+  "Context Management": "Gestão de Contexto",
   "Context messages": "Mensagens de contexto",
+  "Context Priority: Preserves more context, uses more tokens": "Prioridade de Contexto: Preserva mais contexto, utiliza mais tokens",
   "Context Window": "Janela de Contexto",
+  "Context window unknown for this model": "Janela de contexto desconhecida para este modelo",
   "Continue Editing": "Continuar Edição",
   "Continue this thread": "Continuar este tópico",
   "Continue this Thread": "Continuar este Tópico",
@@ -188,6 +200,8 @@
   "copy": "Copiar",
   "Copy": "Copiar",
   "Copy reasoning content": "Copiar conteúdo de raciocínio",
+  "Cost": "Custo",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Prioridade ao Custo: Compacta antecipadamente para poupar tokens, podendo perder algum contexto",
   "Create": "Criar",
   "Create a New Conversation": "Criar uma Nova Conversa",
   "Create a New Image-Creator Conversation": "Criar uma Nova Conversa de Criação de Imagens",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Eliminar a sessão atual",
   "Delete File": "Eliminar Ficheiro",
   "Delete Knowledge Base": "Eliminar Base de Conhecimento",
+  "Delete Summary": "Eliminar Resumo",
   "Delete this record?": "Eliminar este registo?",
+  "Deleting this summary will restore original messages to context calculation.": "Eliminar este resumo restaurará as mensagens originais para o cálculo do contexto.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Publicar conteúdo HTML para EdgeOne Pages e obter um URL público acessível.",
   "Describe the image you want to create...": "Descreva a imagem que deseja criar...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Descreva a imagem que pretende gerar. Seja o mais detalhado possível para obter os melhores resultados.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "p. ex. 128000",
   "e.g. 4096": "Ex: 4096",
   "e.g., Model Name, Current Date": "por exemplo, Nome do Modelo, Data Atual",
+  "Earlier messages summarized": "Mensagens anteriores resumidas",
   "Easy Access": "Acesso Fácil",
   "edit": "Editar",
   "Edit": "Editar",
@@ -352,6 +369,7 @@
   "Get License": "Obter Licença",
   "get more": "Obter mais",
   "Github": "Github",
+  "Go to Image Creator": "Ir para o Criador de Imagens",
   "Google Gemini API Compatible": "Compatível com API Google Gemini",
   "Harmful or offensive content": "Conteúdo nocivo ou ofensivo",
   "Hassle-free setup": "Configuração sem complicações",
@@ -743,6 +761,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "O arquivo que enviou expirou. Para proteger a sua privacidade, todos os dados de cache relacionados ao arquivo foram limpos. Você precisa criar uma nova conversa ou atualizar o contexto, e então enviar o arquivo novamente.",
   "The Image Creator plugin has been activated for the current conversation": "O plugin Criador de Imagens foi ativado para a conversa atual",
   "The license key you entered is invalid. Please check your license key and try again.": "A chave de licença que introduziu é inválida. Por favor verifique a sua chave de licença e tente novamente.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "A percentagem de utilização da janela de contexto que desencadeia a compactação automática. Valores mais baixos poupam tokens, mas podem perder o contexto mais cedo.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "O parâmetro topP controla a diversidade das respostas da AI: valores mais baixos tornam o resultado mais focado e previsível, enquanto valores mais altos permitem respostas mais variadas e criativas.",
   "Theme": "Tema",
   "Thinking": "A pensar",
@@ -753,12 +772,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Esforço de Pensamento só funciona para os modelos OpenAI da série o.",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Serviço de análise na nuvem de terceiros, suporta PDF e a maioria dos ficheiros do Office. Requer um token de API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Esta ação não pode ser desfeita. Todos os documentos e os seus embeddings serão permanentemente eliminados.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Esta sessão de imagem já não está ativa. Por favor, utilize o novo Criador de Imagens para a geração de imagens.",
   "This license key has reached the activation limit": "Esta chave de licença atingiu o limite de ativação",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Esta chave de licença atingiu o limite de ativação, <a>clique aqui</a> para gerir a licença e os dispositivos para desativar dispositivos antigos.",
   "This license key has reached the activation limit.": "Esta chave de licença atingiu o limite de ativação.",
   "This model does not support tool use": "Este modelo não suporta uso de ferramentas",
   "This model does not support vision": "Este modelo não suporta visão",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Este servidor permite que LLMs recuperem e processem conteúdo de páginas web, convertendo HTML para markdown para um consumo mais fácil.",
+  "This session": "Esta sessão",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Isto irá analisar todas as conversas guardadas e reconstruir a lista de conversas. Esta operação irá apagar a lista atual e poderá demorar um momento.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Isto irá resumir a conversa atual e iniciar um novo tópico com o contexto comprimido. Continuar?",
   "Thread History": "Histórico de Tópicos",
@@ -832,6 +853,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Bem-vindo ao Chatbox AI",
   "What can I help you with today?": "Como posso ajudar hoje?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Quando ativado, as conversas serão resumidas automaticamente para gerir a utilização da janela de contexto.",
   "Yes": "Sim",
   "You are already a Premium user": "Já é um utilizador Premium",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Você excedeu o limite de taxa para o serviço Chatbox AI. Por favor, tente novamente mais tarde.",
