--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} файл(ы) не поддерживаются: {{files}}. Поддерживаемые форматы: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} файлов поставлено в очередь для обработки на сервере",
   "{{count}} MCP servers imported": "{{count}} MCP серверов импортировано",
+  "{{count}} ref": "{{count}} ист.",
   "A cozy coffee shop interior": "Уютный интерьер кофейни",
+  "A cute rabbit in Pixar animation style": "Милый кролик в стиле анимации Pixar",
   "A futuristic city with flying cars": "Футуристический город с летающими машинами",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Поставщик с этим ID уже существует. Продолжение перезапишет существующую конфигурацию.",
   "A serene mountain landscape at sunset": "Безмятежный горный пейзаж на закате",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Авто (использовать модель чата)",
   "Auto (Use Chatbox AI)": "Авто (Использовать Chatbox AI)",
   "Auto (Use Last Used)": "Авто (использовать последний использованный)",
+  "Auto Compaction": "Автоматическое сжатие",
   "Auto-collapse code blocks": "Автоматически скрывать блоки кода",
   "Auto-Generate Chat Titles": "Автоматически генерировать названия чатов",
   "Auto-preview artifacts": "Автоматический предпросмотр артефактов",
   "Automatic updates": "Автоматические обновления",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Автоматически рендерить сгенерированные артефакты (например, HTML с CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Автоматически обобщает и сжимает историю переписки, когда размер контекста превышает пороговое значение, сохраняя ключевую информацию и сокращая использование токенов.",
   "Azure API Key": "Ключ Azure API",
   "Azure API Version": "Версия API Azure",
   "Azure Dall-E Deployment Name": "Название развертывания модели Azure Dall-E",
@@ -95,6 +99,7 @@
   "Back to Login": "Вернуться к входу",
   "Back to Previous": "Вернуться к Предыдущему",
   "Back to previous message": "Вернуться к предыдущему сообщению",
+  "Balanced: Good balance between cost and context preservation": "Сбалансированный: Хороший баланс между стоимостью и сохранением контекста",
   "Beta updates": "Бета обновления",
   "Binary/executable files are not supported": "Бинарные/исполняемые файлы не поддерживаются",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Поиск Bing предоставляется бесплатно, но он может иметь ограничения и может быть изменен корпорацией Майкрософт.",
@@ -154,6 +159,10 @@
   "Collapse": "Свернуть",
   "Coming soon": "Скоро будет",
   "Command": "Команда",
+  "Compacting conversation...": "Сжатие диалога...",
+  "Compacting...": "Сжатие...",
+  "Compaction failed": "Сжатие не удалось",
+  "Compaction Threshold": "Порог сжатия",
   "Completed": "Завершено",
   "Compress Conversation": "Сжать разговор",
   "Compression completed successfully!": "Сжатие успешно завершено!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Соединение с {{aiProvider}} не удалось. Обычно это происходит из-за неправильной конфигурации или проблем с аккаунтом {{aiProvider}}. Пожалуйста, <buttonOpenSettings>проверьте ваши настройки</buttonOpenSettings> и проверьте статус вашего аккаунта {{aiProvider}}, или приобретите <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>, чтобы мгновенно разблокировать все расширенные модели без какой-либо конфигурации.",
   "Content": "Содержимое",
   "Context": "Контекст",
+  "Context Management": "Управление контекстом",
   "Context messages": "Контекстные сообщения",
+  "Context Priority: Preserves more context, uses more tokens": "Приоритет контекста: сохраняет больше контекста, использует больше токенов",
   "Context Window": "Окно контекста",
+  "Context window unknown for this model": "Окно контекста неизвестно для этой модели",
   "Continue Editing": "Продолжить редактирование",
   "Continue this thread": "Продолжить эту тему",
   "Continue this Thread": "Продолжить эту Тему",
@@ -188,6 +200,8 @@
   "copy": "Копировать",
   "Copy": "Копировать",
   "Copy reasoning content": "Копировать содержимое рассуждения",
+  "Cost": "Стоимость",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Приоритет стоимости: сжимает на раннем этапе для экономии токенов, возможна потеря части контекста",
   "Create": "Создать",
   "Create a New Conversation": "Создать новый разговор",
   "Create a New Image-Creator Conversation": "Создать новый разговор с Image-Creator",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Удалить текущую сессию",
   "Delete File": "Удалить файл",
   "Delete Knowledge Base": "Удалить базу знаний",
+  "Delete Summary": "Удалить сводку",
   "Delete this record?": "Удалить эту запись?",
+  "Deleting this summary will restore original messages to context calculation.": "Удаление этой сводки восстановит исходные сообщения в расчете контекста.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Развертывание HTML-контента на EdgeOne Pages и получение доступного публичного URL.",
   "Describe the image you want to create...": "Опишите изображение, которое вы хотите создать...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Опишите изображение, которое вы хотите сгенерировать. Будьте максимально подробны для получения наилучших результатов.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "напр. 128000",
   "e.g. 4096": "напр. 4096",
   "e.g., Model Name, Current Date": "например, название модели, текущая дата",
+  "Earlier messages summarized": "Предыдущие сообщения обобщены",
   "Easy Access": "Легкий доступ",
   "edit": "Редактировать",
   "Edit": "Редактировать",
@@ -353,6 +370,7 @@
   "Get License": "Получить лицензию",
   "get more": "Получить больше",
   "Github": "Гитхаб",
+  "Go to Image Creator": "Перейти в Image Creator",
   "Google Gemini API Compatible": "Совместимо с API Google Gemini",
   "Harmful or offensive content": "Вредное или неприемлемое содержимое",
   "Hassle-free setup": "Простая настройка",
@@ -745,6 +763,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Отправленный вами файл истек. Для защиты вашей конфиденциальности все данные кэша, связанные с файлами, были очищены. Вам нужно создать новый разговор или обновить контекст, а затем отправить файл снова.",
   "The Image Creator plugin has been activated for the current conversation": "Плагин Image Creator был активирован для текущего разговора",
   "The license key you entered is invalid. Please check your license key and try again.": "Введенный вами ключ лицензии недействителен. Пожалуйста, проверьте ваш ключ лицензии и попробуйте снова.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "Процент использования окна контекста, запускающий автоматическое сжатие. Более низкие значения экономят токены, но могут привести к более ранней потере контекста.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "Параметр topP контролирует разнообразие ответов AI: более низкие значения делают вывод более сфокусированным и предсказуемым, тогда как более высокие значения позволяют получать более разнообразные и творческие ответы.",
   "Theme": "Тема",
   "Thinking": "Думаю",
@@ -755,12 +774,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Усилие мышления работает только для моделей OpenAI o-серии",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Сторонний облачный сервис анализа, поддерживает PDF и большинство файлов Office. Требуется токен API.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Это действие нельзя отменить. Все документы и их эмбеддинги будут безвозвратно удалены.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Эта сессия создания изображений больше не активна. Пожалуйста, используйте новый Генератор изображений для генерации изображений.",
   "This license key has reached the activation limit": "Этот ключ лицензии достиг лимита активации",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Этот ключ лицензии достиг лимита активации, <a>нажмите здесь</a>, чтобы управлять лицензией и устройствами для деактивации старых устройств.",
   "This license key has reached the activation limit.": "Этот лицензионный ключ исчерпал лимит активаций.",
   "This model does not support tool use": "Эта модель не поддерживает использование инструментов",
   "This model does not support vision": "Эта модель не поддерживает визуальные возможности",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Этот сервер позволяет LLM получать и обрабатывать контент с веб-страниц, преобразуя HTML в markdown для более легкого потребления.",
+  "This session": "Эта сессия",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Это просканирует все сохраненные беседы и перестроит список бесед. Эта операция очистит текущий список и может занять некоторое время.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Это суммирует текущий разговор и начнет новую ветку со сжатым контекстом. Продолжить?",
   "Thread History": "История Тем",
@@ -834,6 +855,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Добро пожаловать в Chatbox AI",
   "What can I help you with today?": "Чем я могу помочь вам сегодня?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "Если включено, беседы будут автоматически обобщаться для управления использованием окна контекста.",
   "Yes": "Да",
   "You are already a Premium user": "Вы уже являетесь премиум-пользователем",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Вы превысили лимит скорости для сервиса Chatbox AI. Пожалуйста, попробуйте снова позже.",
