--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) stöds inte: {{files}}. Format som stöds: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} fil(er) har köats för serverbearbetning",
   "{{count}} MCP servers imported": "{{count}} MCP servrar importerade",
+  "{{count}} ref": "{{count}} referenser",
   "A cozy coffee shop interior": "En mysig kaféinteriör",
+  "A cute rabbit in Pixar animation style": "En söt kanin i Pixar-animationsstil",
   "A futuristic city with flying cars": "En futuristisk stad med flygande bilar",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En leverantör med detta ID finns redan. Om du fortsätter kommer den befintliga konfigurationen att skrivas över.",
   "A serene mountain landscape at sunset": "Ett fridfullt bergslandskap vid solnedgången",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "Auto (Använd chattmodell)",
   "Auto (Use Chatbox AI)": "Auto (Använd Chatbox AI)",
   "Auto (Use Last Used)": "Auto (Använd senast använd)",
+  "Auto Compaction": "Automatisk komprimering",
   "Auto-collapse code blocks": "Minimera kodblock automatiskt",
   "Auto-Generate Chat Titles": "Generera chattrubriker automatiskt",
   "Auto-preview artifacts": "Förhandsgranska artefakter automatiskt",
   "Automatic updates": "Automatisk uppdatering",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "Rendera genererade artefakter automatiskt (t.ex. HTML med CSS, JS, Tailwind)",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "Sammanfatta och komprimera konversationshistoriken automatiskt när kontextstorleken överskrider tröskelvärdet, vilket bevarar viktig information samtidigt som tokenanvändningen minskas.",
   "Azure API Key": "Azure API-nyckel",
   "Azure API Version": "Azure API-version",
   "Azure Dall-E Deployment Name": "Azure Dall-E Distributionsnamn",
@@ -95,6 +99,7 @@
   "Back to Login": "Tillbaka till inloggning",
   "Back to Previous": "Tillbaka till föregående",
   "Back to previous message": "Tillbaka till föregående meddelande",
+  "Balanced: Good balance between cost and context preservation": "Balanserad: God balans mellan kostnad och bevarande av kontext",
   "Beta updates": "Beta uppdateringar",
   "Binary/executable files are not supported": "Binära/körbara filer stöds inte",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Sök erbjuds gratis att använda, men det kan ha begränsningar och kan komma att ändras av Microsoft.",
@@ -154,6 +159,10 @@
   "Collapse": "Minimera",
   "Coming soon": "Kommer snart",
   "Command": "Kommando",
+  "Compacting conversation...": "Kompakterar konversation...",
+  "Compacting...": "Kompakterar...",
+  "Compaction failed": "Kompaktering misslyckades",
+  "Compaction Threshold": "Komprimeringströskel",
   "Completed": "Slutförd",
   "Compress Conversation": "Komprimera konversation",
   "Compression completed successfully!": "Komprimering slutfördes framgångsrikt!",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "Anslutningen till {{aiProvider}} misslyckades. Detta inträffar vanligtvis på grund av felaktig konfiguration eller {{aiProvider}}-kontoproblem. Vänligen <buttonOpenSettings>kontrollera dina inställningar</buttonOpenSettings> och verifiera ditt {{aiProvider}}-kontostatus, eller köp en <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> för att låsa upp alla avancerade modeller omedelbart utan någon konfiguration.",
   "Content": "Innehåll",
   "Context": "Kontext",
+  "Context Management": "Kontexthantering",
   "Context messages": "Antal kontextmeddelanden",
+  "Context Priority: Preserves more context, uses more tokens": "Kontextprioritet: Bevarar mer kontext, använder fler tokens",
   "Context Window": "Kontextfönster",
+  "Context window unknown for this model": "Kontextfönster okänt för denna modell",
   "Continue Editing": "Fortsätt redigera",
   "Continue this thread": "Fortsätt denna tråd",
   "Continue this Thread": "Fortsätt denna tråd",
@@ -188,6 +200,8 @@
   "copy": "Kopiera",
   "Copy": "Kopiera",
   "Copy reasoning content": "Kopiera resonemangsinnehåll",
+  "Cost": "Kostnad",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "Kostnadsprioritet: Komprimerar tidigt för att spara tokens, kan förlora viss kontext",
   "Create": "Skapa",
   "Create a New Conversation": "Skapa ny konversation",
   "Create a New Image-Creator Conversation": "Skapa ny bildskaparkonversation",
@@ -229,7 +243,9 @@
   "Delete Current Session": "Radera aktuell session",
   "Delete File": "Ta bort fil",
   "Delete Knowledge Base": "Radera Kunskapsbas",
+  "Delete Summary": "Ta bort sammanfattning",
   "Delete this record?": "Radera denna post?",
+  "Deleting this summary will restore original messages to context calculation.": "Att ta bort denna sammanfattning återställer de ursprungliga meddelandena till kontextberäkningen.",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuera HTML-innehåll till EdgeOne Pages och erhålla en tillgänglig offentlig URL.",
   "Describe the image you want to create...": "Beskriv bilden du vill skapa...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "Beskriv bilden du vill generera. Var så detaljerad som möjligt för bästa resultat.",
@@ -257,6 +273,7 @@
   "e.g. 128000": "t.ex. 128000",
   "e.g. 4096": "t.ex. 4096",
   "e.g., Model Name, Current Date": "t.ex. modellnamn, aktuellt datum",
+  "Earlier messages summarized": "Tidigare meddelanden sammanfattade",
   "Easy Access": "Enkel åtkomst",
   "edit": "Redigera",
   "Edit": "Redigera",
@@ -353,6 +370,7 @@
   "Get License": "Skaffa licens",
   "get more": "Fler",
   "Github": "Github",
+  "Go to Image Creator": "Gå till Bildskapare",
   "Google Gemini API Compatible": "Google Gemini API-kompatibel",
   "Harmful or offensive content": "Skadligt eller stötande innehåll",
   "Hassle-free setup": "Enkel installation",
@@ -744,6 +762,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "Filen du skickade har gått ut. För att skydda din integritet har all filrelaterad cachedata rensats. Du behöver skapa en ny konversation eller uppdatera kontexten och sedan skicka filen igen.",
   "The Image Creator plugin has been activated for the current conversation": "Bildskaparpluginet har aktiverats för den aktuella konversationen",
   "The license key you entered is invalid. Please check your license key and try again.": "Licensnyckeln du angav är ogiltig. Vänligen kontrollera din licensnyckel och försök igen.",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "Procentandelen av kontextfönstrets användning som utlöser automatisk komprimering. Lägre värden sparar tokens men kan leda till att kontext går förlorad tidigare.",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP-parametern styr mångfalden av AI-svar: lägre värden gör utdata mer fokuserat och förutsägbart, medan högre värden möjliggör mer varierade och kreativa svar.",
   "Theme": "Tema",
   "Thinking": "Tänker",
@@ -754,12 +773,14 @@
   "Thinking Effort only works for OpenAI o-series models": "Tankeansträngning fungerar endast för OpenAI o-seriens modeller",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "Tredjeparts molnbaserad parsningstjänst, stöder PDF och de flesta Office-filer. Kräver API-token.",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "Denna åtgärd kan inte ångras. Alla dokument och deras inbäddningar kommer att raderas permanent.",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "Denna bildsession är inte längre aktiv. Använd den nya Image Creator för bildgenerering.",
   "This license key has reached the activation limit": "Denna licensnyckel har nått aktiveringsgränsen",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "Denna licensnyckel har nått aktiveringsgränsen, <a>klicka här</a> för att hantera licens och enheter för att inaktivera gamla enheter.",
   "This license key has reached the activation limit.": "Denna licensnyckel har nått aktiveringsgränsen.",
   "This model does not support tool use": "Denna modell stöder inte verktygsanvändning",
   "This model does not support vision": "Denna modell stöder inte bildförståelse",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "Denna server möjliggör för LLM:er att hämta och bearbeta innehåll från webbsidor, och konverterar HTML till markdown för enklare konsumtion.",
+  "This session": "Denna session",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "Detta kommer att skanna alla sparade konversationer och bygga om konversationslistan. Denna åtgärd kommer att rensa den nuvarande listan och kan ta en stund.",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "Detta kommer att sammanfatta den nuvarande konversationen och starta en ny tråd med det komprimerade sammanhanget. Fortsätta?",
   "Thread History": "Trådhistorik",
@@ -834,6 +855,7 @@
   "WeChat": "WeChat",
   "Welcome to Chatbox": "Välkommen till Chatbox AI",
   "What can I help you with today?": "Vad kan jag hjälpa dig med idag?",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "När detta är aktiverat kommer konversationer att sammanfattas automatiskt för att hantera användningen av kontextfönstret.",
   "Yes": "Ja",
   "You are already a Premium user": "Du är redan en Premium-användare",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "Du har överskridit hastighetsgränsen för Chatbox AI-tjänsten. Vänligen försök igen senare.",
