--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 个文件不支持：{{files}}。支持的格式：{{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 个文件已加入服务器解析队列",
   "{{count}} MCP servers imported": "{{count}} 个 MCP 服务器已导入",
+  "{{count}} ref": "{{count}} 个引用",
   "A cozy coffee shop interior": "温馨的咖啡馆室内",
+  "A cute rabbit in Pixar animation style": "皮克斯动画风格的可爱兔子",
   "A futuristic city with flying cars": "拥有飞行汽车的未来城市",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此ID的提供方已存在。继续将覆盖现有配置。",
   "A serene mountain landscape at sunset": "宁静的日落山景",
@@ -82,11 +84,13 @@
   "Auto (Use Chat Model)": "自动（使用对话模型）",
   "Auto (Use Chatbox AI)": "自动 (使用 Chatbox AI)",
   "Auto (Use Last Used)": "自动（使用上次使用的模型）",
+  "Auto Compaction": "自动压缩",
   "Auto-collapse code blocks": "自动收起代码块",
   "Auto-Generate Chat Titles": "自动生成聊天标题",
   "Auto-preview artifacts": "自动预览生成物(Artifacts)",
   "Automatic updates": "自动更新",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "自动渲染生成物（例如，带有 CSS、JS、Tailwind 的 HTML）",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "当上下文大小超过阈值时，自动总结并压缩对话历史，在保留关键信息的同时减少 token 使用量。",
   "Azure API Key": "密钥",
   "Azure API Version": "Azure API 版本",
   "Azure Dall-E Deployment Name": "Dall-E 模型部署名称",
@@ -96,6 +100,7 @@
   "Back to Login": "返回登录",
   "Back to Previous": "回到上个话题",
   "Back to previous message": "定位到上一条消息",
+  "Balanced: Good balance between cost and context preservation": "均衡：在成本和上下文保留之间取得良好平衡",
   "Beta updates": "Beta 更新",
   "Binary/executable files are not supported": "二进制/可执行文件不支持",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search 免费提供使用，但可能存在限制并由 Microsoft 决定更改。",
@@ -155,6 +160,10 @@
   "Collapse": "折叠",
   "Coming soon": "敬请期待",
   "Command": "命令",
+  "Compacting conversation...": "正在压缩对话...",
+  "Compacting...": "正在压缩...",
+  "Compaction failed": "压缩失败",
+  "Compaction Threshold": "压缩阈值",
   "Completed": "已完成",
   "Compress Conversation": "压缩对话",
   "Compression completed successfully!": "压缩成功！",
@@ -172,8 +181,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "连接 {{aiProvider}} 失败。这通常是由于配置错误或 {{aiProvider}} 账户问题。请<buttonOpenSettings>检查您的设置</buttonOpenSettings>并验证您的 {{aiProvider}} 账户状态，或购买<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解锁所有高级模型，无需任何配置。",
   "Content": "内容",
   "Context": "上下文",
+  "Context Management": "上下文管理",
   "Context messages": "上下文消息数",
+  "Context Priority: Preserves more context, uses more tokens": "上下文优先：保留更多上下文，消耗更多 token",
   "Context Window": "上下文窗口",
+  "Context window unknown for this model": "此模型的上下文窗口未知",
   "Continue Editing": "继续编辑",
   "Continue this thread": "继续该话题",
   "Continue this Thread": "继续该话题",
@@ -189,6 +201,8 @@
   "copy": "复制",
   "Copy": "复制",
   "Copy reasoning content": "复制思考内容",
+  "Cost": "成本",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "成本优先：提前压缩以节省 token，可能会丢失部分上下文",
   "Create": "创建",
   "Create a New Conversation": "创建新的对话",
   "Create a New Image-Creator Conversation": "创建新的图片生成对话",
@@ -231,7 +245,9 @@
   "Delete Current Session": "删除当前会话",
   "Delete File": "删除文件",
   "Delete Knowledge Base": "删除知识库",
+  "Delete Summary": "删除总结",
   "Delete this record?": "删除这条记录？",
+  "Deleting this summary will restore original messages to context calculation.": "删除此摘要将恢复原始消息至上下文计算。",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 内容到 EdgeOne Pages 并获取一个可访问的公共 URL。",
   "Describe the image you want to create...": "描述你想要创建的图片...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "描述你想要生成的图像。为了获得最佳效果，请提供尽可能详细的描述。",
@@ -259,6 +275,7 @@
   "e.g. 128000": "例如 128000",
   "e.g. 4096": "例如 4096",
   "e.g., Model Name, Current Date": "例如，模型名称、当前日期",
+  "Earlier messages summarized": "更早的消息已总结",
   "Easy Access": "轻松访问",
   "edit": "编辑",
   "Edit": "编辑",
@@ -356,6 +373,7 @@
   "Get License": "获取License",
   "get more": "获取更多",
   "Github": "Github",
+  "Go to Image Creator": "前往图像生成器",
   "Google Gemini API Compatible": "Google Gemini API 兼容",
   "Harmful or offensive content": "有害或不适当的内容",
   "Hassle-free setup": "无需烦恼各种技术难题",
@@ -756,6 +774,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "您发送的文件已过期。为了保护您的隐私，所有与文件相关的缓存数据已被清除。您需要创建一个新的对话或刷新上下文，然后重新发送文件。",
   "The Image Creator plugin has been activated for the current conversation": "当前对话启动了 Image Creator 插件",
   "The license key you entered is invalid. Please check your license key and try again.": "您输入的 license key 无效。请检查您的 license key 并重试。",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "触发自动压缩的上下文窗口使用比例。较低的值可以节省 token，但可能会更早地丢失上下文。",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP 参数控制 AI 响应的多样性：较低的值使输出更集中和可预测，而较高的值则允许更多样化和富有创意的回复。",
   "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "网页版暂时不支持本地解析此文件类型。请使用文本文件（txt、markdown等）或使用<LinkToAdvancedFileProcessing>Chatbox AI 服务</LinkToAdvancedFileProcessing>进行云端文档分析。",
   "Theme": "主题",
@@ -767,12 +786,14 @@
   "Thinking Effort only works for OpenAI o-series models": "思考仅适用于 OpenAI o 系列模型",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方云解析服务，支持 PDF 和大多数 Office 文件。需要 API token。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此操作无法撤销。所有文档及其嵌入将被永久删除。",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "此图片会话已失效。请使用新的图片生成器进行图片生成。",
   "This license key has reached the activation limit": "此 license key 已达到激活上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 已达到激活上限，<a>点击这里</a>管理 license 与设备来取消激活旧设备。",
   "This license key has reached the activation limit.": "此 license key 已达到激活上限",
   "This model does not support tool use": "该模型不支持工具调用",
   "This model does not support vision": "该模型不支持图片输入",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "这个服务器使LLMs能够从网页中检索和处理内容，将HTML转换为markdown以便更易于使用。",
+  "This session": "本会话",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "此操作将扫描所有已存储的对话并重建对话列表。此操作将清除当前列表，可能需要一些时间。",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "这将总结当前对话并开始一个新会话，使用压缩后的上下文。继续？",
   "Thread History": "历史话题",
@@ -849,6 +870,7 @@
   "WeChat": "微信",
   "Welcome to Chatbox": "欢迎使用 Chatbox AI",
   "What can I help you with today?": "今天我能为你提供什么帮助？",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "启用后，对话将自动总结，以管理上下文窗口的使用。",
   "Yes": "是",
   "You are already a Premium user": "你已经是专业版用户",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "您已超过 Chatbox AI 服务的速率限制。请稍后重试。",
