--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -9,7 +9,9 @@
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 檔案不支援：{{files}}。支援的格式：{{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} 個檔案已排入伺服器解析佇列",
   "{{count}} MCP servers imported": "{{count}} MCP 伺服器已匯入",
+  "{{count}} ref": "{{count}} 條引用",
   "A cozy coffee shop interior": "溫馨的咖啡店室內",
+  "A cute rabbit in Pixar animation style": "皮克斯動畫風格的可愛兔子",
   "A futuristic city with flying cars": "充滿未來感的城市與飛行車",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此 ID 的提供方已存在。繼續將覆蓋現有設定。",
   "A serene mountain landscape at sunset": "寧靜的日落山景",
@@ -81,11 +83,13 @@
   "Auto (Use Chat Model)": "自動（使用對話模型）",
   "Auto (Use Chatbox AI)": "自動 (使用 Chatbox AI)",
   "Auto (Use Last Used)": "自動（使用上次使用的模型）",
+  "Auto Compaction": "自動壓縮",
   "Auto-collapse code blocks": "自動收起代碼塊",
   "Auto-Generate Chat Titles": "自動生成聊天標題",
   "Auto-preview artifacts": "自動預覽生成內容(Artifacts)",
   "Automatic updates": "自動更新",
   "Automatically render generated artifacts (e.g., HTML with CSS, JS, Tailwind)": "自動渲染生成的內容（例如，帶有 CSS、JS、Tailwind 的 HTML）",
+  "Automatically summarize and compact conversation history when context size exceeds the threshold, preserving key information while reducing token usage.": "當上下文長度超過閾值時，自動摘要並壓縮對話歷史，在保留關鍵資訊的同時減少 token 使用量。",
   "Azure API Key": "密鑰",
   "Azure API Version": "Azure API 版本",
   "Azure Dall-E Deployment Name": "Dall-E 模型部署名稱",
@@ -95,6 +99,7 @@
   "Back to Login": "返回登入",
   "Back to Previous": "回到上個話題",
   "Back to previous message": "定位到上一條消息",
+  "Balanced: Good balance between cost and context preservation": "均衡：在成本與上下文保留之間取得良好平衡",
   "Beta updates": "Beta 更新",
   "Binary/executable files are not supported": "二進位/可執行檔不支援",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing 搜尋免費提供使用，但可能存在限制並可能隨 Microsoft 調整。",
@@ -154,6 +159,10 @@
   "Collapse": "收起",
   "Coming soon": "請耐心等待喔",
   "Command": "指令",
+  "Compacting conversation...": "正在壓縮對話...",
+  "Compacting...": "壓縮中...",
+  "Compaction failed": "壓縮失敗",
+  "Compaction Threshold": "壓縮閾值",
   "Completed": "已完成",
   "Compress Conversation": "壓縮對話",
   "Compression completed successfully!": "壓縮已成功完成！",
@@ -171,8 +180,11 @@
   "Connection to {{aiProvider}} failed. This typically occurs due to incorrect configuration or {{aiProvider}} account issues. Please <buttonOpenSettings>check your settings</buttonOpenSettings> and verify your {{aiProvider}} account status, or purchase a <LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing> to unlock all advanced models instantly without any configuration.": "與 {{aiProvider}} 的連接失敗。這通常是由於配置不正確或 {{aiProvider}} 帳戶問題引起的。請<OpenSettingsButton>檢查您的設置</OpenSettingsButton>並驗證您的 {{aiProvider}} 帳戶狀態，或購買<LinkToLicensePricing>Chatbox AI License</LinkToLicensePricing>即可立即解鎖所有高級模型，無需任何配置。",
   "Content": "內容",
   "Context": "上下文",
+  "Context Management": "上下文管理",
   "Context messages": "上下文訊息數",
+  "Context Priority: Preserves more context, uses more tokens": "上下文優先：保留更多上下文，使用更多 Token",
   "Context Window": "上下文視窗",
+  "Context window unknown for this model": "此模型的上下文視窗未知",
   "Continue Editing": "繼續編輯",
   "Continue this thread": "繼續該話題",
   "Continue this Thread": "繼續該話題",
@@ -188,6 +200,8 @@
   "copy": "複製",
   "Copy": "複製",
   "Copy reasoning content": "複製推理內容",
+  "Cost": "成本",
+  "Cost Priority: Compacts early to save tokens, may lose some context": "成本優先：及早壓縮以節省 Token，可能會丟失部分上下文。",
   "Create": "建立",
   "Create a New Conversation": "創建新的聊天對話",
   "Create a New Image-Creator Conversation": "創建新的圖片製造機對話",
@@ -229,7 +243,9 @@
   "Delete Current Session": "刪除當前會話",
   "Delete File": "刪除檔案",
   "Delete Knowledge Base": "刪除知識庫",
+  "Delete Summary": "刪除摘要",
   "Delete this record?": "刪除此記錄？",
+  "Deleting this summary will restore original messages to context calculation.": "刪除此摘要將恢復原始訊息至上下文計算中。",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 內容到 EdgeOne Pages 並取得可存取的公開 URL。",
   "Describe the image you want to create...": "描述您想要生成的圖片...",
   "Describe the image you want to generate. Be as detailed as possible for best results.": "描述您想生成的圖像。請儘可能詳細，以獲得最佳效果。",
@@ -257,6 +273,7 @@
   "e.g. 128000": "例如 128000",
   "e.g. 4096": "例如 4096",
   "e.g., Model Name, Current Date": "例如，模型名稱、當前日期",
+  "Earlier messages summarized": "先前的訊息已摘要",
   "Easy Access": "輕鬆訪問",
   "edit": "編輯",
   "Edit": "編輯",
@@ -353,6 +370,7 @@
   "Get License": "获取License",
   "get more": "取得更多",
   "Github": "Github",
+  "Go to Image Creator": "前往圖片生成器",
   "Google Gemini API Compatible": "Google Gemini API 兼容",
   "Harmful or offensive content": "有害或不適當的內容",
   "Hassle-free setup": "免去繁瑣技術問題的困擾",
@@ -749,6 +767,7 @@
   "The file you sent has expired. To protect your privacy, all file-related cache data has been cleared. You need to create a new conversation or refresh the context, and then send the file again.": "您發送的文件已過期。為了保護您的隱私，所有與文件相關的緩存數據已被清除。您需要創建一個新對話或刷新上下文，然後重新發送文件。",
   "The Image Creator plugin has been activated for the current conversation": "當前對話啟動了 Image Creator 插件",
   "The license key you entered is invalid. Please check your license key and try again.": "您輸入的授權密鑰無效。請檢查您的授權密鑰並重試。",
+  "The percentage of context window usage that triggers automatic compaction. Lower values save tokens but may lose context earlier.": "觸發自動壓縮的上下文視窗使用百分比。較低的值可節省 Token，但可能會較早遺失上下文。",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP 參數控制 AI 回應的多樣性：較低的值會使輸出更集中和可預測，而較高的值則允許更多樣和有創意的回覆。",
   "Theme": "主題",
   "Thinking": "思考中",
@@ -759,12 +778,14 @@
   "Thinking Effort only works for OpenAI o-series models": "思考程度僅適用於 OpenAI o-series 模型",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方雲端解析服務，支援 PDF 和大部分 Office 檔案。需要 API 權杖。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此動作無法復原。所有文件及其嵌入將被永久刪除。",
+  "This image session is no longer active. Please use the new Image Creator for image generation.": "此圖片對話已不再有效。請使用新的 Image Creator 進行圖片生成。",
   "This license key has reached the activation limit": "此 license key 已達到啟用上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 授權密鑰已達到啟用限制，<a>點擊這裡</a>管理授權與設備以停用舊設備。",
   "This license key has reached the activation limit.": "此授權金鑰已達啟用上限。",
   "This model does not support tool use": "該模型不支援工具調用",
   "This model does not support vision": "該模型不支援視覺能力",
   "This server enables LLMs to retrieve and process content from web pages, converting HTML to markdown for easier consumption.": "此伺服器讓大型語言模型能夠從網頁中擷取並處理內容，將 HTML 轉換為 Markdown 以便於閱讀。",
+  "This session": "此會話",
   "This will scan all stored conversations and rebuild the conversation list. This operation will clear the current list and may take a moment.": "這將掃描所有已儲存的對話並重建對話列表。此操作將清除目前的列表，並可能需要一些時間。",
   "This will summarize the current conversation and start a new thread with the compressed context. Continue?": "這將會總結目前的對話，並開啟一個新的對話串，包含壓縮後的上下文。繼續？",
   "Thread History": "歷史話題",
@@ -839,6 +860,7 @@
   "WeChat": "微信",
   "Welcome to Chatbox": "歡迎使用 Chatbox AI",
   "What can I help you with today?": "今天我能幫助你什麼？",
+  "When enabled, conversations will be automatically summarized to manage context window usage.": "啟用後，對話將會被自動摘要，以管理上下文視窗的使用量。",
   "Yes": "是",
   "You are already a Premium user": "你已經是高級版用戶",
   "You have exceeded the rate limit for the Chatbox AI service. Please try again later.": "您已超過 Chatbox AI 服務的速率限制。請稍後重試。",
